relecture de l'enquêteur

--- a/data/classes/4wrSCyX6akmyo7Wj.htm
+++ b/data/classes/4wrSCyX6akmyo7Wj.htm
@@ -1,7 +1,6 @@
 Name: Investigator
 Nom: Enquêteur
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Description (en) ------
 <p><em>You seek to uncover the truth, doggedly pursuing leads to reveal the plots of devious villains, discover ancient secrets, or unravel other mysteries. Your analytical mind quickly formulates solutions to complicated problems and your honed senses identify even the most obscure clues. Wielding knowledge as a weapon, you study the creatures and dangers you encounter to exploit their weaknesses.</em></p>
@@ -238,7 +237,7 @@ Nom: Enquêteur
 <h2>Jets de sauvegarde</h2>
 <p>Qualifié en Vigueur<br />Expert en Réflexes<br />Expert en Volonté</p>
 <h2>Compétences</h2>
-<p>Qualifié en Société<br />Qualifié en une ou plus compétences déterminée par votre méthodologie<br />Qualifié dans un nombre de compétences supplémentaires égal à 4 plus votre modificateur d’Intelligence</p>
+<p>Qualifié en Société<br />Qualifié en une ou plusieurs compétences déterminées par votre méthodologie<br />Qualifié dans un nombre de compétences supplémentaires égal à 4 plus votre modificateur d’Intelligence</p>
 <h2>Attaques</h2>
 <p>Qualifié avec les armes simples<br />Qualifié avec les armes de guerre<br />Qualifié en attaques à mains nues</p>
 <h2>Défenses</h2>
@@ -257,7 +256,7 @@ Nom: Enquêteur
 <tbody>
 <tr>
 <td>1</td>
-<td>Ascendance et historique, Concevoir un stratagème, Don d’enquêteur, Frappe stratégique 1d6, Maîtrises initiales, Méthodologie, Sur l’affaire</td>
+<td>Ascendance et historique, Maîtrises initiales, Concevoir un stratagème, Don d’enquêteur, Frappe stratégique 1d6, Méthodologie, Sur l’affaire</td>
 </tr>
 <tr>
 <td>2</td>
@@ -273,7 +272,7 @@ Nom: Enquêteur
 </tr>
 <tr>
 <td>5</td>
-<td>Amélioration de compétence, Don ancestral, Expertise martiale, Frappe stratégique 2d6, primes de caractéristique</td>
+<td>Amélioration de compétence, Don ancestral, Expertise martiale, Frappe stratégique 2d6, primes de caractéristique, leçons accomplies</td>
 </tr>
 <tr>
 <td>6</td>
@@ -289,7 +288,7 @@ Nom: Enquêteur
 </tr>
 <tr>
 <td>9</td>
-<td>Amélioration de compétence, Don ancestral, Expertise de l’enquêteur, Frappe stratégique lies, Vigueur surhumaine</td>
+<td>Amélioration de compétence, Don ancestral, Expertise de l’enquêteur, Frappe stratégique 3d6, leçons accomplies, Vigueur surhumaine</td>
 </tr>
 <tr>
 <td>10</td>
@@ -342,7 +341,7 @@ Nom: Enquêteur
 <h2>Maîtrises initiales</h2>
 <p>Au niveau 1, vous obtenez un nombre de maîtrises, indiquées au début de cette classe, qui représentent votre entraînement de base.</p>
 <h2>Sur l’affaire</h2>
-<p>En tant qu’enquêteur, vous considérez vos aventures comme des affaires qui n’attendent que d’être résolues. Vous gagnez une activité et une réaction que vous pouvez utiliser pour enquêter sur vos affaires : @Compendium[pf2e.actionspf2e.xTK2zsWFyxSJvYbX]{Poursuivre une piste} et @Compendium[pf2e.actionspf2e.25WDi1cVUrW92sUj]{Partager les indices}.</p>
+<p>En tant qu’enquêteur, vous considérez vos aventures comme des affaires qui n’attendent que d’être résolues. Vous gagnez une activité et une réaction que vous pouvez utiliser pour enquêter sur des affaires : @Compendium[pf2e.actionspf2e.xTK2zsWFyxSJvYbX]{Poursuivre une piste} et @Compendium[pf2e.actionspf2e.25WDi1cVUrW92sUj]{Partager les indices}.</p>
 <h2>Concevoir un Stratagème</h2>
 <p>Vous pouvez simuler un combat dans votre esprit et utiliser votre cerveau plutôt que vos muscles pour porter une attaque.</p>
 <p>Vous obtenez l’action @Compendium[pf2e.actionspf2e.m0f2B7G9eaaTmhFL]{Concevoir un stratagème}</p>
@@ -360,21 +359,21 @@ Nom: Enquêteur
 <h2>Frappe stratégique</h2>
 <p>Quand vous portez une attaque avec grand soin et en la préparant, vous infligez un coup plus significatif. Quand vous effectuez une Frappe qui ajoute votre modificateur d’Intelligence au jet d’attaque grâce à Concevoir un stratagème, vous infligez 1d6 points de dégâts de précision supplémentaires.</p>
 <p>Au fur et à mesure que votre niveau d’enquêteur augmente, il en est de même de la dangerosité de votre frappe stratégique. Augmentez le nombre de dés de 1 aux niveaux 5, 9, 13 et 17.</p>
-<h2 class="title">Dons de compétence<span style="float: right;">Niveau 2</span></h2>
+<h2>Dons de compétence<span style="float: right;">Niveau 2</span></h2>
 <p>Au niveau 2 et tous les 2 niveaux par la suite, vous obtenez un don de compétence. Vous devez être au moins qualifié dans la compétence correspondante pour choisir un don de compétence.</p>
-<h2 class="title">Améliorations de compétence<span style="float: right;">Niveau 2</span></h2>
+<h2>Améliorations de compétence<span style="float: right;">Niveau 2</span></h2>
 <p>Vous obtenez plus d’améliorations de compétence que les membres des autres classes. Au niveau 2, puis à chaque niveau, vous gagnez une amélioration de compétence. Vous pouvez utiliser cette amélioration pour augmenter votre rang de maîtrise et devenir qualifié dans une compétence dans laquelle vous étiez inexpérimenté ou pour améliorer votre rang dans une compétence dans laquelle vous êtes déjà qualifié pour devenir expert.</p>
 <p>À partir du niveau 7, vous pouvez utiliser l’amélioration de compétence pour devenir maître dans une compétence dans laquelle vous êtes déjà expert et à partir du niveau 15, vous pouvez l’utiliser pour devenir légendaire dans une compétence dans laquelle vous êtes déjà maître.</p>
-<h2 class="title">Dons Généraux<span style="float: right;">Niveau 3</span></h2>
+<h2>Dons Généraux<span style="float: right;">Niveau 3</span></h2>
 <p>Au niveau 3, puis tous les quatre niveaux, vous gagnez un don général.</p>
-<h2 class="title">Souvenirs affûtés<span style="float: right;">Level 3</span></h2>
+<h2>Souvenirs affûtés<span style="float: right;">Niveau 3</span></h2>
 <p>Vous pouvez vous souvenir de faits pertinents sur des sujets qui ne sont pas votre spécialité. Votre bonus de maîtrise pour les tests visant à @Compendium[pf2e.actionspf2e.1OagaWtBpVXExToo]{Vous souvenir} dans des compétences pour lesquelles vous n’êtes pas qualifié est égal à votre niveau au lieu de +0.</p>
 <h2>Leçons accomplies<span style="float: right;">Niveau 3</span></h2>
-<p>Au niveau 3, puis à tous les autres niveaux impairs, vous obtenez un don de compétence. Ce don doit être associé à une compétence basée sur l’Intelligence, la Sagesse, le Charisme ou à la compétence que vous avez gagnée grâce à votre méthodologie.</p>
+<p>Au niveau 3, puis à tous les autres niveaux impairs, vous obtenez un don de compétence. Ce don doit être associé à une compétence basée sur l’Intelligence, la Sagesse, le Charisme ou à la compétence que vous avez obtenue grâce à votre méthodologie.</p>
 <h2>Primes de caractéristiques<span style="float: right;">Niveau 5</span></h2>
 <p>Au niveau 5, puis tous les cinq niveaux, vous améliorez quatre caractéristiques différentes. Vous pouvez utiliser ces primes de caractéristique pour faire passer une valeur de caractéristique au-dessus de 18. La prime augmente la valeur de caractéristique de 1 si elle est déjà de 18 ou plus ou de 2 si elle est inférieure à 18.</p>
-<h2 class="title">Dons ancestraux<span style="float: right;">Niveau 5</span></h2>
-<p>Vous gagnez un don ancestral au niveau 5 puis tous les quatre niveaux, en plus de celui avec lequel vous avez commencé. La liste des dons ancestraux à votre disposition figure dans le chapitre 2, dans la section correspondant à votre ascendance.</p>
+<h2>Dons ancestraux<span style="float: right;">Niveau 5</span></h2>
+<p>Vous gagnez un don ancestral au niveau 5 puis tous les quatre niveaux, en plus de celui avec lequel vous avez commencé.</p>
 <h2>Expertise martiale<span style="float: right;">Niveau 5</span></h2>
 <p>Vous vous consacrez à l’apprentissage approfondi du maniement de vos armes. Votre rang de maîtrise avec les armes simples, les attaques à mains nues et les armes de guerre passe à expert.</p>
 <h2>Sens alertes<span style="float: right;">Niveau 7</span></h2>
@@ -386,7 +385,7 @@ Nom: Enquêteur
 <h2>Expertise de l’enquêteur<span style="float: right;">Niveau 9</span></h2>
 <p>Vous avez affiné vos techniques d’investigation à un degré exceptionnel. Le bonus de circonstances obtenu grâce à @Compendium[pf2e.actionspf2e.xTK2zsWFyxSJvYbX]{Suivre une piste} passe à +2. Votre rang de maîtrise pour le DD de classe d’enquêteur passe à expert.</p>
 <h2>Improvisation déductive<span style="float: right;">Niveau 11</span></h2>
-<p>Vous utilisez vos talents de déduction pour accomplir n’importe quelle tâche nécessaire qui s’avère pour résoudre l’affaire.</p>
+<p>Vous utilisez vos talents de déduction pour accomplir n’importe quelle tâche qui s’avère nécessaire pour résoudre l’affaire.</p>
 <p>Vous pouvez tenter n’importe quel test nécessitant que vous soyez qualifié dans une compétence et ce, même si vous n’êtes pas qualifié dans la compétence en question. Vous pouvez tenter n’importe quel test nécessitant que vous soyez expert dans une compétence pour autant que vous soyez qualifié dans la compétence en question. Vous pouvez tenter n’importe quel test nécessitant que vous soyez légendaire dans une compétence pour autant que vous soyez maître dans la compétence en question.</p>
 <h2>Résolution<span style="float: right;">Niveau 11</span></h2>
 <p>Votre résolution cuirasse votre esprit. Votre rang de maîtrise pour les jets de Volonté passe à maître. Quand vous obtenez un succès sur un jet de Volonté, vous remportez à la place un succès critique.</p>
@@ -395,7 +394,7 @@ Nom: Enquêteur
 <h2>Expertise avec les armures légères<span style="float: right;">Niveau 13</span></h2>
 <p>Vous avez appris à esquiver tout en portant une armure légère. Votre rang de maîtrise avec les armures légères et la défense sans armure devient expert.</p>
 <h2>Maîtrise martiale<span style="float: right;">Niveau 13</span></h2>
-<p>Vous maîtrisez pleinement vos armes. Votre rang de maîtrise pour les armes simples et de guerre ainsi que pour les attaques à maine nues passe à maître.</p>
+<p>Vous maîtrisez pleinement vos armes. Votre rang de maîtrise pour les armes simples et de guerre ainsi que pour les attaques à mains nues passe à maître.</p>
 <h2>Évasion<span style="float: right;">Niveau 15</span></h2>
 <p>Vous avez appris à vous déplacer rapidement afin d’échapper aux explosions, au souffle d’un dragon, et à bien pire. Votre rang de maîtrise pour les jets de Réflexes passe à maître. Quand vous obtenez un succès sur un jet de Réflexes, celui-ci est transformé en succès critique.</p>
 <h2>Spécialisation martiale supérieure<span style="float: right;">Niveau 15</span></h2>
@@ -403,6 +402,6 @@ Nom: Enquêteur
 <h2>Résolution accrue<span style="float: right;">Niveau 17</span></h2>
 <p>Votre entraînement incroyable vous a accordé une résistance mentale. Votre rang de maîtrise des jets de sauvegarde de Volonté devient légendaire. Quand vous obtenez un succès à un jet de Volonté, vous remportez à la place un succès critique. Quand vous obtenez un échec critique à un jet de Volonté, celui-ci se transforme en échec. Lorsque vous obtenez un échec sur le jet de Volonté contre un effet qui vous inflige des dégâts, vous ne subissez que la moitié des dégâts.</p>
 <h2>Maîtrise des armures légères<span style="float: right;">Niveau 19</span></h2>
-<p>Votre maitrise des armures légères s’améliore, augmentant votre capacité à esquiver les coups. Votre rang de maîtrise avec les armures légères et la défense sans armure devient maître.</p>
+<p>Votre maitrise des armures légères s’améliore, augmentant votre capacité à esquiver les coups. Votre rang de maîtrise avec les armures légères et la défense sans armure passe à maître.</p>
 <h2>Maître Détective<span style="float: right;">Niveau 19</span></h2>
 <p>En tant que maître détective, vous pouvez résoudre n’importe quelle affaire et trouver tous les indices disponibles. Si vous Suivez une piste et que vous entrez dans un nouvel endroit qui comporte un nouvel indice permettant de résoudre le mystère, le MJ vous informe de l’existence de l’indice et de son type : un objet, une personne, un effet de sort ou quelque chose du genre. Quand vous trouvez l’indice, le MJ vous informe de ce fait. S’il y a plus d’un indice dans l’endroit en question, le MJ en choisit un et vous informe au sujet de cet indice. Quand vous trouvez l’un des indices présents dans l’endroit, le MJ vous indique que vous avez trouvé l’indice, même s’il ne s’agissait pas de celui qui avait été choisi et même s’il y a d’autres indices que vous n’avez pas encore trouvés. Votre rang de maîtrise pour votre DD de classe d’enquêteur passe à maître.</p>
