--- a/data/equipment/consumable-02-cTBmQgWUyf50x3dY.htm
+++ b/data/equipment/consumable-02-cTBmQgWUyf50x3dY.htm
@@ -1,7 +1,6 @@
 Name: Black Smear Poison
-Nom: 
-État: changé
-État d'origine: auto-trad
+Nom: Poison de Tache noire
+État: libre
 
 ------ Description (en) ------
 <p>Many calignis use a debilitating poison crafted from subterranean fungi.</p>
@@ -13,11 +12,11 @@ Nom:
 <p><strong>Stage 2</strong> As stage 1</p>
 <p><strong>Stage 3</strong> [[/r 1d6 #poison]] poison, and @Compendium[pf2e.conditionitems.MIRkyAjyBeXivMa7]{Enfeebled 2} (1 round)</p>
 ------ Description (fr) ------
-De nombreux calignis utilisent un poison débilitant fabriqué à partir de champignons souterrains ;
+De nombreux Calignis utilisent un poison débilitant fabriqué à partir de champignons souterrains.
 <hr />
-<p><strong>Activate</strong> <span style="font-family : 'Pathfinder2eActions' ; font-size : 1.8em ; display : inline;">T</span> Interact (Injury)</p>
-<p><strong>Jet de sauvegarde</strong> DC 16 Force</p>
+<p><strong>Activation</strong> <span class="pf2-icon">T</span> Interagir (Blessure)</p>
+<p><strong>Jet de sauvegarde</strong> DD 16 Force</p>
 <p><strong>Durée maximale</strong> 6 rounds</p>
-<p><strong>Stade 1</strong> [[/r 1d6 #poison]] poison et @Compendium[pf2e.conditionitems.MIRkyAjyBeXivMa7]{Enfeebled 1} (1 round)</p>
+<p><strong>Stade 1</strong> [[/r 1d6 #poison]] poison et @Compendium[pf2e.conditionitems.MIRkyAjyBeXivMa7]{Affaibli} (1 round)</p>
 <p><strong>Stade 2</strong> Comme stade 1</p>
-<p><strong>Stade 3</strong> [[/r 1d6 #poison]] poison, et @Compendium[pf2e.conditionitems.MIRkyAjyBeXivMa7]{Enfeebled 2} (1 round)</p>
+<p><strong>Stade 3</strong> [[/r 1d6 #poison]] poison, et Affaibli 2 (1 round)</p>
