--- a/data/feats/ancestry-13-1lpygRsa487Jto4L.htm
+++ b/data/feats/ancestry-13-1lpygRsa487Jto4L.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: Your nanites are programmed to automatically revive you.
-Avantage: Vos nanites sont programmées pour vous ranimer automatiquement.
+Avantage: Une fois par jour, vous perdez l'état mourant et récupérez 1 PV.
 
 ------ Description (en) ------
 <p><strong>Frequency</strong> once per day<br /><strong>Trigger</strong> You have the dying condition and are about to attempt a recovery check.</p>
@@ -14,6 +14,7 @@ Avantage: Vos nanites sont programmées pour vous ranimer automatiquement.
 <p>Your nanites are programmed to automatically revive you. You’re restored to 1 Hit Point, lose the dying and unconscious conditions, and can act normally on this turn. You gain or increase the wounded condition as normal when losing the dying condition in this way.</p>
 ------ Description (fr) ------
 <p><strong>Fréquence</strong> une fois par jour</p>
-<p><strong>Déclencheur</strong> Vous avez la condition mourante et êtes sur le point de tenter un test de récupération.</p>
+<p><strong>Déclencheur</strong> Vous avez la condition mourant et êtes sur le point de tenter un test de récupération.</p>
 <hr />
-<p>Vos nanites sont programmés pour automatiquement vous faire revivre. Vous êtes ramené à 1 Point de vie, perdez les conditions mourant et inconscient et pouvez agir normalement lors de ce tour. Vous obtenez ou augmentez la condition Blessé  comme à l'ordinaire lorsque vous perdez la condition mourant de cette manière.</p>
+<p>Vos nanites sont programmés pour automatiquement vous faire revivre.</p>
+<p>Vous êtes ramené à 1 Point de vie, perdez les conditions mourant et inconscient et pouvez agir normalement lors de ce tour. Vous obtenez ou augmentez la condition Blessé comme à l'ordinaire lorsque vous perdez la condition mourant de cette manière.</p>
