--- a/data/feats/ancestry-13-05wQPB1Z20DOy4rH.htm
+++ b/data/feats/ancestry-13-05wQPB1Z20DOy4rH.htm
@@ -6,10 +6,10 @@ PrereqFR: Tout don de lignage tieffelin
 
 ------ Benefits and spoiler ----
 Benefits: You have a deep connection to the fiendish realms, allowing you to summon a fiend matching your own lineage.
-Avantage: Vous avez un lien profond avec les royaumes diaboliques, ce qui vous permet d'invoquer un démon correspondant à votre propre lignée.
+Avantage: vous pouvez lancer Convocation de fiélon une fois par jour.
 
 ------ Description (en) ------
 <p>You have a deep connection to the fiendish realms, allowing you to summon a fiend matching your own lineage. Once per day, you can cast @Compendium[pf2e.spells-srd.29ytKctjg7qSW2ff]{Summon Fiend} as a 5th-level divine innate spell. The fiend you summon must match your own lineage.</p>
 ------ Description (fr) ------
 <p>Vous avez une profonde connection avec les royaumes fiélons, vous permettant de convoquer un fiélon qui correspond à votre propre lignage.</p>
-<p>Une fois par jour, vous pouvez Lancer  @Compendium[pf2e.spells-srd.29ytKctjg7qSW2ff]{Convocation de fiélon} comme un sort divin inné de niveau 5. Le fiélon que vous convoquez doit correspondre à votre propre lignage.</p>
+<p>Une fois par jour, vous pouvez Lancer @Compendium[pf2e.spells-srd.29ytKctjg7qSW2ff]{Convocation de fiélon} comme un sort divin inné de niveau 5. Le fiélon que vous convoquez doit correspondre à votre propre lignage.</p>
