--- a/data/feats/ancestry-13-5iHB5ZFJ25XrZHye.htm
+++ b/data/feats/ancestry-13-5iHB5ZFJ25XrZHye.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: You awaken a spirit of creation within the hazard.
-Avantage: Vous éveillez un esprit de création au sein du danger.
+Avantage: Vous pouvez déclencher à distance un danger que vous avez désamorcé sans le détruire.
 
 ------ Description (en) ------
 <p><strong>Frequency</strong> once per day <br /><strong>Trigger</strong> You Disable a hazard. <br /><strong>Requirements</strong> The hazard isn't broken.</p>
@@ -17,4 +17,5 @@ Avantage: Vous éveillez un esprit de création au sein du danger.
 <p><strong>Déclencheur</strong> Vous Désamorcez un danger.</p>
 <p><strong>Conditions</strong> Le danger n'est pas brisé.</p>
 <hr />
-<p>Vous éveillez un esprit de la création à l'intérieur du danger. Vous apprenez les effets du danger. Une fois au cours des 10 minutes suivantes, lorsque vous observez une créature entreprendre une action qui devrait déclencher une des réactions du danger ou des actions libres si vous ne l'avez pas Désarmé, vous pouvez utiliser une réaction pour réarmer le danger, de sorte que la créature observée le déclenche immédiatement.</p>
+<p>Vous éveillez un esprit de la création à l'intérieur du danger.</p>
+<p>Vous apprenez les effets du danger. Une fois au cours des 10 minutes suivantes, lorsque vous observez une créature entreprendre une action qui devrait déclencher une des réactions ou une des actions libres du danger si vous ne l'aviez pas Désamorcé, vous pouvez utiliser une réaction pour réarmer le danger, de sorte que la créature observée le déclenche immédiatement.</p>
