--- a/data/feats/ancestry-13-7Lx8rsEbBJkg6C17.htm
+++ b/data/feats/ancestry-13-7Lx8rsEbBJkg6C17.htm
@@ -2,12 +2,11 @@ Name: Gift Of The Moon
 Nom: Don de la lune
 PrereqEN: 
 PrereqFR: 
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Benefits and spoiler ----
 Benefits: You can share your power with others, but they can't escape the werecreature's curse as easily as you can.
-Avantage: Tu peux partager ton pouvoir avec d’autres personnes, mais elles ne peuvent pas échapper à la malédiction de la créature-garou aussi facilement que toi.
+Avantage: Vous pouvez lancer Frénésie lunaire une fois par jour.
 
 ------ Description (en) ------
 <p>You can share your power with others, but they can’t escape the werecreature’s curse as easily as you can. You can cast a 5th-level @Compendium[pf2e.spells-srd.YtesyvfAIwXOqISq]{Moon Frenzy} as a primal innate spell once per day. At 15th level, you cast a 6th-level <em>moon frenzy</em> instead. At 17th level, your 6th-level <em>moon frenzy</em> grants its standard effects, except the temporary Hit Points increase to 15 and the silver weakness increases to 15. At 20th level, you cast a 10th-level <em>moon frenzy</em> instead. The spell uses your class DC or spell DC, whichever is higher.</p>
@@ -15,4 +14,4 @@ Avantage: Tu peux partager ton pouvoir avec d’autres personnes, mais elles ne 
 <p>Vous pouvez partager votre pouvoir avec les autres mais ils ne peuvent échapper à la malédiction lycanthropique aussi facilement que vous le pouvez. Vous pouvez lancer @Compendium[pf2e.spells-srd.YtesyvfAIwXOqISq]{Frénésie lunaire} au niveau 5 comme un sort inné primordial une fois par jour.</p>
 <p>Au niveau 15 , vous lancez Frénésie lunaire au niveau 6 à la place.</p>
 <p>Au niveau 17, votre frénésie lunaire au niveau 6 accorde ses effets ordinaires sauf que les points de vie temporaires passent à 15 et la faiblesse à l'argent passe à 15.</p>
-<p>Au niveau 20, vous lancez Frénésie lunaire au niveau 10 à la place. Le sort utilise - au plus élevé - entre votre DD de sort et votre DD de classe.</p>
+<p>Au niveau 20, vous lancez Frénésie lunaire au niveau 10 à la place. Le sort utilise le plus élevé entre votre DD de sort et votre DD de classe.</p>
