--- a/data/feats/ancestry-13-8H72RC7QI1i8wjJ1.htm
+++ b/data/feats/ancestry-13-8H72RC7QI1i8wjJ1.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: You've learned to put your sturdy claws to work digging through the earth.
-Avantage: Tu as appris à utiliser tes robustes griffes pour creuser dans la terre.
+Avantage: Vous obtenez une Vitesse de Creusement de 4,5 m.
 
 ------ Description (en) ------
 <p>You've learned to put your sturdy claws to work digging through the earth. You gain a @Compendium[pf2e.actionspf2e.H6v1VgowHaKHnVlG]{Burrow} Speed of 15 feet.</p>
