--- a/data/feats/ancestry-13-48z7BPYIZJIgj3x5.htm
+++ b/data/feats/ancestry-13-48z7BPYIZJIgj3x5.htm
@@ -6,9 +6,10 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: You make sure that your allies push themselves while traveling.
-Avantage: Vous veillez à ce que vos alliés se poussent pendant le voyage.
+Avantage: Vous obtenez les dons généraux Chef de caravane et Garder la cadence.
 
 ------ Description (en) ------
 <p>You make sure that your allies push themselves while traveling. You gain the @Compendium[pf2e.feats-srd.5ZsmRm7HvFAw2XDZ]{Caravan Leader} and @Compendium[pf2e.feats-srd.38uOVS8fLZxraUrg]{Pick Up The Pace} general feats, even if you don’t meet the prerequisites.</p>
 ------ Description (fr) ------
-<p>Vous encourage vos alliés à aller au-delà de leurs limites lorsque vous voyagez. Vous obtenez les dons généraux @Compendium[pf2e.feats-srd.5ZsmRm7HvFAw2XDZ]{Chef de caravane} et @Compendium[pf2e.feats-srd.38uOVS8fLZxraUrg]{Garder la cadence}, même si vous n'en remplissez pas les prérequis.</p>
+<p>Vous encouragez vos alliés à aller au-delà de leurs limites lorsque vous voyagez.</p>
+<p>Vous obtenez les dons généraux @Compendium[pf2e.feats-srd.5ZsmRm7HvFAw2XDZ]{Chef de caravane} et @Compendium[pf2e.feats-srd.38uOVS8fLZxraUrg]{Garder la cadence}, même si vous n'en remplissez pas les prérequis.</p>
