--- a/data/feats/ancestry-13-55XNy1TVETEMc0vf.htm
+++ b/data/feats/ancestry-13-55XNy1TVETEMc0vf.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: Humans are renowned for their ability to persist through the most grueling of trials.
-Avantage: Les êtres humains sont réputés pour leur capacité à persévérer dans les épreuves les plus éprouvantes.
+Avantage: En réussissant un test nu DD17, vous évitez d'être Fatigué.
 
 ------ Description (en) ------
 <p>Humans are renowned for their ability to persist through the most grueling of trials. When you would become @Compendium[pf2e.conditionitems.HL2l2VRSaQHu9lUw]{Fatigued}, attempt a DC 17 flat check. On a success, you aren't fatigued.</p>
