--- a/data/feats/ancestry-13-569SxRBvTCDiHlbW.htm
+++ b/data/feats/ancestry-13-569SxRBvTCDiHlbW.htm
@@ -2,12 +2,11 @@ Name: Summon Air Elemental
 Nom: Convocation d'élementaire d'air
 PrereqEN: 
 PrereqFR: 
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Benefits and spoiler ----
 Benefits: You have a connection to the Inner Spheres, allowing you to summon an elemental ally.
-Avantage: Vous avez une connexion avec les sphères intérieures, ce qui vous permet d'invoquer un allié élémentaire.
+Avantage: Vous pouvez lancer Convocation d'élémentaires (air) une fois par jour.
 
 ------ Description (en) ------
 <p>You have a connection to the Inner Spheres, allowing you to summon an elemental ally. Once per day, you can cast @Compendium[pf2e.spells-srd.lpT6LotUaQPfinjj]{Summon Elemental} as a 5th-level primal innate spell, but the elemental summoned must be an air elemental.</p>
