--- a/data/feats/ancestry-13-8Qn80RunXaChOM5p.htm
+++ b/data/feats/ancestry-13-8Qn80RunXaChOM5p.htm
@@ -6,10 +6,11 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: Your shadow assaults your foes.
-Avantage: Votre ombre s'attaque à vos ennemis.
+Avantage: Vous pouvez lancer Explosion d'ombre une fois par jour.
 
 ------ Description (en) ------
 <p>Your shadow assaults your foes. You can cast @Compendium[pf2e.spells-srd.IqJ9URobmJ9L9UBG]{Shadow Blast} as a 5th-level occult innate spell once per day. At 17th level, your <em>shadow blast</em> is heightened to 6th level.</p>
 ------ Description (fr) ------
-<p>Votre ombre assaille vos adversaires. Vous pouvez lancer @Compendium[pf2e.spells-srd.IqJ9URobmJ9L9UBG]{Explosion d'ombre} comme un sort inné occulte de niveau 5 une fois par jour.</p>
+<p>Votre ombre assaille vos adversaires.</p>
+<p>Vous pouvez lancer @Compendium[pf2e.spells-srd.IqJ9URobmJ9L9UBG]{Explosion d'ombre} comme un sort inné occulte de niveau 5 une fois par jour.</p>
 <p>Au niveau 17, votre Explosion d'ombre est intensifiée au niveau 6.</p>
