--- a/data/feats/ancestry-13-93vQcuKBESXUKoH5.htm
+++ b/data/feats/ancestry-13-93vQcuKBESXUKoH5.htm
@@ -2,14 +2,14 @@ Name: Killing Stone
 Nom: Pierre tueuse
 PrereqEN: Star Orb
 PrereqFR: Orbe étoilée
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Benefits and spoiler ----
 Benefits: Your star orb hides a deadly miasma.
-Avantage: Votre orbe stellaire cache un miasme mortel.
+Avantage: Vous pouvez lancer votre orbe étoilée qui génère un Nuage mortel une fois par jour.
 
 ------ Description (en) ------
 <p>Your star orb hides a deadly miasma. You can cast 5th-level @Compendium[pf2e.spells-srd.MlpbeZ61Euhl0d60]{Cloudkill} as a divine innate spell once per day. The spell’s normal components are replaced with a focus component (your star orb) and a somatic component to aim the orb towards the location for the spell.</p>
 ------ Description (fr) ------
-<p>Votre orbe étoilée cache un miasme mortel. Vous pouvez lancer @Compendium[pf2e.spells-srd.MlpbeZ61Euhl0d60]{Nuage mortel} au niveau 5 comme un sort divin inné une fois par jour. Les composants du sort habituels sont remplacés  avec un composant focalisateur (votre orbe étoilée) et une composante somatique pour lancer l'orbe vers le lieu d'effet du sort.</p>
+<p>Votre orbe étoilée cache un miasme mortel.</p>
+<p>Vous pouvez lancer @Compendium[pf2e.spells-srd.MlpbeZ61Euhl0d60]{Nuage mortel} au niveau 5 comme un sort divin inné une fois par jour. Les composants du sort habituels sont remplacés avec un composant focalisateur (votre orbe étoilée) et une composante somatique pour lancer l'orbe vers le lieu d'effet du sort.</p>
