--- a/data/feats/ancestry-13-9eL7W4rvs4sjhWFT.htm
+++ b/data/feats/ancestry-13-9eL7W4rvs4sjhWFT.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: Your skin glows with intensity.
-Avantage: Votre peau rayonne d'intensité.
+Avantage: L'intensité de votre peau éblouit ou aveugle les créatures dans les 3m.
 
 ------ Description (en) ------
 <p><strong>Frequency</strong> once per day</p>
