--- a/data/feats/ancestry-13-ACeqRSWr4CEwLZgO.htm
+++ b/data/feats/ancestry-13-ACeqRSWr4CEwLZgO.htm
@@ -6,7 +6,7 @@ PrereqFR: ethnie Nidalaise
 
 ------ Benefits and spoiler ----
 Benefits: Thousands of years ago, your ancestors made a pact with Zon-Kuthon .
-Avantage: Il y a des milliers d'années, vos ancêtres ont fait un pacte avec Zon-Kuthon .
+Avantage: Vous pouvez lancer le sort Création au niveau 5 à volonté en échange d'1 pv.
 
 ------ Description (en) ------
 <p>Thousands of years ago, your ancestors made a pact with @Compendium[pf2e.deities.ZfN7jkK6boU1FuiS]{Zon-Kuthon}. He has not forgotten, even if you might wish he had. You can take 1 damage to mix blood and shadows to cast 5th-level @Compendium[pf2e.spells-srd.TUj8eugNqAvB1vVR]{Creation} as an innate divine spell. You can use this ability as often as you wish, but you can have only one such object in existence at a time. If the object encounters bright light, the spell ends and the object dissolves into shadows.</p>
