--- a/data/feats/ancestry-13-AP9PXXaP4a2sMdt2.htm
+++ b/data/feats/ancestry-13-AP9PXXaP4a2sMdt2.htm
@@ -6,9 +6,9 @@ PrereqFR: Porteur de loi
 
 ------ Benefits and spoiler ----
 Benefits: You never fail to strike down the ever-expanding reaches of chaos.
-Avantage: Vous ne manquez jamais d'abattre les étendues toujours plus vastes du chaos.
+Avantage: Toutes vos Frappes d'arme et à mains nues infligent 1 dégât supplémentaire de loi et possèdent les traits magique et loyal.
 
 ------ Description (en) ------
 <p>You never fail to strike down the ever-expanding reaches of chaos. All your weapon and unarmed Strikes deal 1 additional lawful damage and have the lawful and magical traits.</p>
 ------ Description (fr) ------
-<p>Vous ne manquez jamais d'abattre les atteintes toujours en constante expansion du chaos. Toute vos Frappes d'arme et à mains nues infligent 1 dégât supplémentaire de loi et possèdent les traits magique et loyal.</p>
+<p>Vous ne manquez jamais d'abattre les étendues toujours plus vastes du chaos. Toutes vos Frappes d'arme et à mains nues infligent 1 dégât supplémentaire de loi et possèdent les traits magique et loyal.</p>
