--- a/data/feats/ancestry-13-aqTlEPtd5gzs1Lxg.htm
+++ b/data/feats/ancestry-13-aqTlEPtd5gzs1Lxg.htm
@@ -6,7 +6,7 @@ PrereqFR: Armement non conventionnel|qualifié avec une arme choisie avec le don
 
 ------ Benefits and spoiler ----
 Benefits: You’ve continued to advance your powers using your unconventional weapon.
-Avantage: Vous avez continué à développer vos pouvoirs en utilisant votre arme non conventionnelle.
+Avantage: Votre rang de maîtrise experte ou supérieure s'étend à votre Armement non conventionnel.
 
 ------ Description (en) ------
 <p>You've continued to advance your powers using your unconventional weapon. Whenever you gain a class feature that grants you expert or greater proficiency in certain weapons, you also gain that proficiency in the weapon you chose for @Compendium[pf2e.feats-srd.49mBVNF4SK6iYdJm]{Unconventional Weaponry}.</p>
