--- a/data/feats/ancestry-13-arlZTqfppOAXBhdw.htm
+++ b/data/feats/ancestry-13-arlZTqfppOAXBhdw.htm
@@ -6,7 +6,7 @@ PrereqFR: ethnie Jadwiga|héritage humain touché par l'hiver
 
 ------ Benefits and spoiler ----
 Benefits: You can trace your direct descent from one of the Queens of Irrisen and thus from Baba Yaga herself.
-Avantage: Vous pouvez retracer votre descendance directe d'une des reines d'Irrisen et donc de Baba Yaga elle-même.
+Avantage: Votre résistance au froid augmente de 5 + la moitié de votre niveau et vous pouvez lancer Mur de glace une fois par jour.
 
 ------ Description (en) ------
 <p>You can trace your direct descent from one of the Queens of Irrisen and thus from Baba Yaga herself. Your resistance to cold increases to 5 + half your level, and you can cast 5th-level @Compendium[pf2e.spells-srd.R5FHRv7VqyRnxg2t]{Wall of Ice} as an innate arcane spell once per day.</p>
