--- a/data/feats/ancestry-13-cIJfKlbfKezdDbwK.htm
+++ b/data/feats/ancestry-13-cIJfKlbfKezdDbwK.htm
@@ -7,9 +7,10 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: You can summon an elemental ally.
-Avantage: Vous pouvez invoquer un allié élémentaire.
+Avantage: Vous pouvez lancer Convocation d'élémentaires (feu) une fois par jour.
 
 ------ Description (en) ------
 <p>You can summon an elemental ally. Once per day, you can cast @Compendium[pf2e.spells-srd.lpT6LotUaQPfinjj]{Summon Elemental} as a 5th-level primal innate spell, but the elemental summoned must be a fire elemental.</p>
 ------ Description (fr) ------
-<p>Vous pouvez convoquer un allié élémentaire. Une fois par jour, vous pouvez lancer @Compendium[pf2e.spells-srd.lpT6LotUaQPfinjj]{Convocation d'élémentaires} comme un sort inné primordial de niveau 5, mais l'élémentaire convoqué doit être un élémentaire de feu.</p>
+<p>Vous pouvez convoquer un allié élémentaire.</p>
+<p>Une fois par jour, vous pouvez lancer @Compendium[pf2e.spells-srd.lpT6LotUaQPfinjj]{Convocation d'élémentaires} comme un sort inné primordial de niveau 5, mais l'élémentaire convoqué doit être un élémentaire de feu.</p>
