--- a/data/feats/ancestry-13-Cf0CDTZvGaYDAXUN.htm
+++ b/data/feats/ancestry-13-Cf0CDTZvGaYDAXUN.htm
@@ -6,7 +6,7 @@ PrereqFR: expert en Représentation
 
 ------ Benefits and spoiler ----
 Benefits: You've spent many an evening learning songs and tales featuring calacas, death's wandering minstrels.
-Avantage: Vous avez passé de nombreuses soirées à apprendre des chansons et des contes mettant en scène des calacas, les ménestrels errants de la mort.
+Avantage: Une fois par jour, vous lancez Pulsation synaptique (audible).
 
 ------ Description (en) ------
 <p><strong>Frequency</strong> once per day</p>
@@ -15,4 +15,5 @@ Avantage: Vous avez passé de nombreuses soirées à apprendre des chansons et d
 ------ Description (fr) ------
 <p><strong>Fréquence</strong> une fois par jour</p>
 <hr />
-<p>Vous avez passé plus d'un après-midi à apprendre des chansons et des contes arlant des calacas, les menestrels errants de la mort. Vous relâchez de manière dramatique une explosion puissante de son en frappant un instrument que vous portez ou en beuglant une note discordante. Cela possède les effets de @Compendium[pf2e.spells-srd.BilnTGuXrof9Dt9D]{Pulsation synaptique}, mais l'effet est audible plutôt que mental. Le DD est le plus élevé entre votre DD de classe ou votre DD de sort.</p>
+<p>Vous avez passé plus d'un après-midi à apprendre des chansons et des contes parlant des calacas, les menestrels errants de la mort.</p>
+<p>Vous relâchez de manière dramatique une explosion puissante de son en frappant un instrument que vous portez ou en beuglant une note discordante. Cela possède les effets de @Compendium[pf2e.spells-srd.BilnTGuXrof9Dt9D]{Pulsation synaptique}, mais l'effet est audible plutôt que mental. Le DD est le plus élevé entre votre DD de classe ou votre DD de sort.</p>
