--- a/data/feats/ancestry-13-DIjpbE2dh5MRGiYO.htm
+++ b/data/feats/ancestry-13-DIjpbE2dh5MRGiYO.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: You shift the underlying fabric of reality to impose a baseline of order.
-Avantage: Vous modifiez le tissu sous-jacent de la réalité pour imposer un ordre de base.
+Avantage: Vous appliquez à un test de compétence échoué un résultat fixe ou annulez un effet de malchance.
 
 ------ Description (en) ------
 <p><strong>Frequency</strong> once per day</p>
