--- a/data/feats/ancestry-13-eGfYZoWC6cDa2XWd.htm
+++ b/data/feats/ancestry-13-eGfYZoWC6cDa2XWd.htm
@@ -6,7 +6,7 @@ PrereqFR: Avaler la chance
 
 ------ Benefits and spoiler ----
 Benefits: You can Eat Fortune once per hour, rather than once per day.
-Avantage: Vous pouvez manger de la Fortune une fois par heure, plutôt qu'une fois par jour.
+Avantage: Vous pouvez Avaler la chance une fois par heure.
 
 ------ Description (en) ------
 <p>You can Eat Fortune once per hour, rather than once per day.</p>
