--- a/data/feats/ancestry-13-EiiCCJqWnN5RYMV4.htm
+++ b/data/feats/ancestry-13-EiiCCJqWnN5RYMV4.htm
@@ -2,12 +2,11 @@ Name: Universal Longevity
 Nom: Longévité universelle
 PrereqEN: Expert Longevity
 PrereqFR: Longévité experte
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Benefits and spoiler ----
 Benefits: You’ve perfected your ability to keep up with all the skills you’ve learned over your long life.
-Avantage: Vous avez perfectionné votre capacité à suivre toutes les compétences que vous avez acquises au cours de votre longue vie.
+Avantage: Une fois par jour, vous pouvez échanger les compétences dans lesquelles vous êtes temporairement qualifié ou expert.
 
 ------ Description (en) ------
 <p><strong>Frequency</strong> once per day</p>
