--- a/data/feats/ancestry-13-c5xHL6CDFwBqXx2a.htm
+++ b/data/feats/ancestry-13-c5xHL6CDFwBqXx2a.htm
@@ -6,13 +6,13 @@ PrereqFR: Attaque à mains nues de griffe
 
 ------ Benefits and spoiler ----
 Benefits: Your instincts sing of spite and malice, and you've learned a devastating trick: go for the eyes.
-Avantage: Vos instincts vous poussent à la méchanceté et à la malveillance, et vous avez appris un truc dévastateur : viser les yeux.
+Avantage: Lorsque vous avez les mains libres, vous visez les yeux de votre adversaire avec vos griffes.
 
 ------ Description (en) ------
 <p><strong>Requirements</strong> You have both hands free.</p>
 <hr />
 <p>Your instincts sing of spite and malice, and you’ve learned a devastating trick: go for the eyes. You make a claw Strike. If you hit and deal damage, the target is @Compendium[pf2e.conditionitems.TkIyaNPgTZFBCCuh]{Dazzled} for 1 round. On a critical hit, the target is instead @Compendium[pf2e.conditionitems.XgEqL1kFApUbl5Z2]{Blinded} for 1 round and dazzled until restored to maximum hit points.</p>
 ------ Description (fr) ------
-<p><strong>Conditions</strong> Vous avez deux mians libres.</p>
+<p><strong>Conditions</strong> Vous avez deux mains libres.</p>
 <hr />
-<p>Vos insctincts vous chantent une chanson pleine de malice et de malveillance et vous avez appris une astuce dévastatrice : viser les yeux. Vous faites une Frappe de griffe. Si vous touchez et infligez des dégâts, la cible est @Compendium[pf2e.conditionitems.TkIyaNPgTZFBCCuh]{Éblouie} pendant 1 round. Sur un coup critique, la cible est @Compendium[pf2e.conditionitems.XgEqL1kFApUbl5Z2]{Aveuglée} à la place pendant 1 round et éblouie jusqu'à ce qu'eele récupère la totalité de ses points de vie.</p>
+<p>Vos instincts vous chantent une chanson pleine de malice et de malveillance et vous avez appris une astuce dévastatrice : viser les yeux. Vous faites une Frappe de griffe. Si vous touchez et infligez des dégâts, la cible est @Compendium[pf2e.conditionitems.TkIyaNPgTZFBCCuh]{Éblouie} pendant 1 round. Sur un coup critique, la cible est @Compendium[pf2e.conditionitems.XgEqL1kFApUbl5Z2]{Aveuglée} à la place pendant 1 round et éblouie jusqu'à ce qu'elle récupère la totalité de ses points de vie.</p>
