--- a/data/feats/ancestry-13-cIJfKlbfKezdDbwK.htm
+++ b/data/feats/ancestry-13-cIJfKlbfKezdDbwK.htm
@@ -2,8 +2,7 @@ Name: Summon Fire Elemental
 Nom: Convocation d'élémentaire de feu
 PrereqEN: 
 PrereqFR: 
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Benefits and spoiler ----
 Benefits: You can summon an elemental ally.
