--- a/data/feats/ancestry-13-dgpoTae18H4zc9fH.htm
+++ b/data/feats/ancestry-13-dgpoTae18H4zc9fH.htm
@@ -6,7 +6,7 @@ PrereqFR: Familiarité avec les armes des hommes-félins
 
 ------ Benefits and spoiler ----
 Benefits: You are well-trained in traditional catfolk weapons
-Avantage: Vous êtes bien entraînés aux armes traditionnelles des catfolk.
+Avantage: Votre rang de maîtrise avec les armes s'étend aux armes des hommes-félins.
 
 ------ Description (en) ------
 <p>Whenever you gain a class feature that grants you expert or greater proficiency in certain weapons, you also gain that proficiency rank in all weapons you are trained in from Catfolk Weapon Familiarity.</p>
