--- a/data/feats/ancestry-13-Fn8dEIcUZVxuWJgN.htm
+++ b/data/feats/ancestry-13-Fn8dEIcUZVxuWJgN.htm
@@ -2,8 +2,7 @@ Name: Summon Water Elemental
 Nom: Convocation d'élémentaire d'eau
 PrereqEN: 
 PrereqFR: 
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Benefits and spoiler ----
 Benefits: You can summon an elemental ally.
