--- a/data/feats/ancestry-13-g6M5mapOXVf0g9BG.htm
+++ b/data/feats/ancestry-13-g6M5mapOXVf0g9BG.htm
@@ -6,7 +6,7 @@ PrereqFR: Familiarité avec les armes orques
 
 ------ Benefits and spoiler ----
 Benefits: Your orc affinity blends with your class training, granting you great skill with orc weapons.
-Avantage: Votre affinité avec les orcs se mêle à votre formation de classe, vous conférant une grande habileté avec les armes orcs.
+Avantage: Votre rang de maîtrise avec les armes s'étend aux armes orques.
 
 ------ Description (en) ------
 <p>Your orc affinity blends with your class training, granting you great skill with orc weapons. Whenever you gain a class feature that grants you expert or greater proficiency in a given weapon or weapons, you also gain that proficiency in the falchion, the greataxe, and all orc weapons in which you are trained.</p>
