--- a/data/feats/ancestry-13-GfpHBiOX02PQz0Pm.htm
+++ b/data/feats/ancestry-13-GfpHBiOX02PQz0Pm.htm
@@ -7,9 +7,9 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: You can open your mouth to an immense size and spew forth an impossibly large field of tentacles.
-Avantage: Vous pouvez ouvrir votre bouche à une taille immense et cracher un champ de tentacules incroyablement grand.
+Avantage: Vous pouvez lancer Tentacules noirs une fois par jour.
 
 ------ Description (en) ------
 <p>You can open your mouth to an immense size and spew forth an impossibly large field of tentacles. You can cast @Compendium[pf2e.spells-srd.2w4OpAGihn1JSHFD]{Black Tentacles} once per day as an innate occult spell, though when you do so, you spew them from your mouth out to the appropriate range, where they take root and begin Grappling creatures as usual. The tentacles recognize you as a part of them and don’t attempt to Grapple you, even if you are in the area.</p>
 ------ Description (fr) ------
-<p>Vous pouvez ouvrir en grand votre bouche jusqu'à une taille immense et cracher un champ d'une grandeur impossible, de tentacules. Vous pouvez lancer @Compendium[pf2e.spells-srd.2w4OpAGihn1JSHFD]{Tentacules noires} une fois par jour comme un sort inné occulte, bien que lorsque vous le faites, vous les crachez de votre bouche jusqu'à la portée appropriée, où ils prennent racine et commencent à Agripper les créatures. Les tentacules vous reconnaissent comme une partie d'elles-mêmes et n'essaient pas de vous Agripper, même si vous êtes dans la zone.</p>
+<p>Vous pouvez ouvrir en grand votre bouche jusqu'à une taille immense et cracher un champ d'une grandeur impossible, de tentacules. Vous pouvez lancer @Compendium[pf2e.spells-srd.2w4OpAGihn1JSHFD]{Tentacules noirs} une fois par jour comme un sort inné occulte. Lorsque vous le faites, vous les crachez littéralement jusqu'à la portée appropriée où ils prennent racine et commencent à Agripper les créatures. Les tentacules vous reconnaissent comme une partie d'elles-mêmes et n'essaient pas de vous Agripper, même si vous êtes dans la zone.</p>
