--- a/data/feats/ancestry-13-GndRoEYD3uWjJji3.htm
+++ b/data/feats/ancestry-13-GndRoEYD3uWjJji3.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: You call on your celestial forebears to rid your body of all toxins and impurities.
-Avantage: Vous faites appel à vos ancêtres célestes pour débarrasser votre corps de toutes les toxines et impuretés.
+Avantage: Vous pouvez tenter un test de religion pour contrer une maladie ou un poison qui vous affecte.
 
 ------ Description (en) ------
 <p><strong>Frequency</strong> once per day</p>
@@ -15,4 +15,5 @@ Avantage: Vous faites appel à vos ancêtres célestes pour débarrasser votre c
 ------ Description (fr) ------
 <p><strong>Fréquence</strong> une fois par jour</p>
 <hr />
-<p>Vous en appelez à vos ancêtres célestes pour purger votre corps de toutes les toxines et impuretés. Pour chaque mamadie ou poison qui vous affecte actuellement, tentez un test de Religion pour contrer cette maladie ou ce poison. Comme à l'ordinaire, votre niveau de contre est égal à la moitié de votre niveau, arrondi au supérieur.</p>
+<p>Vous en appelez à vos ancêtres célestes pour purger votre corps de toutes les toxines et impuretés.</p>
+<p>Pour chaque maladie ou poison qui vous affecte actuellement, tentez un test de Religion pour contrer cette maladie ou ce poison. Comme à l'ordinaire, votre niveau de contre est égal à la moitié de votre niveau, arrondi au supérieur.</p>
