--- a/data/feats/ancestry-13-fX5FybM93HIQRRd1.htm
+++ b/data/feats/ancestry-13-fX5FybM93HIQRRd1.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: You hiss a spiteful curse at the creature.
-Avantage: Vous sifflez un juron méchant à la créature.
+Avantage: Vous obligez une créature à relancer un jet de sauvegarde réussi.
 
 ------ Description (en) ------
 <p><strong>Frequency</strong> once per day</p>
@@ -17,4 +17,5 @@ Avantage: Vous sifflez un juron méchant à la créature.
 <p><strong>Fréquence</strong> une fois par jour</p>
 <p><strong>Déclencheur</strong> Une créature dans les 9 m que vous pouvez voir devrait réussir son jet de sauvegarde.</p>
 <hr />
-<p>Vous feulez une malédiction malveillante sur la créature. La cible doit relancer le jet déclencheur et utiliser le pire résultat.</p>
+<p>Vous feulez une malédiction malveillante sur la créature.</p>
+<p>La cible doit relancer le jet déclencheur et utiliser le pire résultat.</p>
