--- a/data/feats/ancestry-13-fnMT0AsZXFW9Ppyp.htm
+++ b/data/feats/ancestry-13-fnMT0AsZXFW9Ppyp.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: You secrete a cloak of concentrated poison that harms any who dare attack you.
-Avantage: Vous secrétez une cape de poison concentré qui blesse tous ceux qui osent vous attaquer.
+Avantage: Toute créature qui vous blesse avec une Frappe au corps à corps sans allonge subit 3d6 dégâts de poison.
 
 ------ Description (en) ------
 <p><strong>Frequency</strong> once per day</p>
@@ -15,4 +15,4 @@ Avantage: Vous secrétez une cape de poison concentré qui blesse tous ceux qui 
 ------ Description (fr) ------
 <p><strong>Fréquence</strong> une fois parr jour</p>
 <hr />
-<p>Vous secretez une cape de poison concentrée qui blesse quiconque ose vous attaquer. Pendant 1 minute, toute créature qui vous touche ou vous blesse avec une attaque à mains nues ou une attaque d'arme au corps-à-corps sans le trait allongesubit [[/r 3d6 #poison]] dégâts de poison.</p>
+<p>Vous sécrétez une cape de poison concentrée qui blesse quiconque ose vous attaquer. Pendant 1 minute, toute créature qui vous touche ou vous blesse avec une attaque à mains nues ou une attaque d'arme au corps-à-corps sans le trait allonge subit [[/r 3d6 #poison]] dégâts de poison.</p>
