--- a/data/feats/ancestry-13-gwzjvKQQ6zmgVVmS.htm
+++ b/data/feats/ancestry-13-gwzjvKQQ6zmgVVmS.htm
@@ -6,9 +6,9 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: Whether through painstaking exposure, devoted prayer, or simple luck, you've found a greater affinity for life through the sun's light.
-Avantage: Que ce soit grâce à une exposition minutieuse, à une prière dévouée ou à la simple chance, vous avez trouvé une plus grande affinité avec la vie grâce à la lumière du soleil.
+Avantage: Dans la lumière directe du soleil, les effets positifs vous soignent et les effets négatifs vous blessent.
 
 ------ Description (en) ------
 <p>Whether through painstaking exposure, devoted prayer, or simple luck, you’ve found a greater affinity for life through the sun’s light. When in an area of direct natural sunlight, your negative healing is suppressed, meaning you are healed by positive healing effects and harmed by negative energy.</p>
 ------ Description (fr) ------
-<p>Que ce soit à cause d'une exposition douloureuse, une prière dévouée ou la simple chance, vous avez trouvé une affinité supérieure pour la vie à travers la lumière du soleil. Lorsque vous vous trouvez dans une zone de lumière du soleil naturelle directe, vos soins négatifs sont supprimés, signifiant que vous êtes soigné par les effets positifs et blessés par l'énergie négative.</p>
+<p>Que ce soit grâce à une exposition douloureuse, une prière dévouée ou à la simple chance, vous avez trouvé une plus grande affinité avec la vie grâce à la lumière du soleil. Lorsque vous vous trouvez dans une zone de lumière du soleil naturelle directe, vos soins négatifs sont supprimés, signifiant que vous êtes soigné par les effets positifs et blessés par l'énergie négative.</p>
