--- a/data/feats/ancestry-13-H965m1koFvY4FQkF.htm
+++ b/data/feats/ancestry-13-H965m1koFvY4FQkF.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: You can transform into a harmless bat.
-Avantage: Tu peux te transformer en une chauve-souris inoffensive.
+Avantage: Vous obtenez les effets du sort Forme de nuisible (chauve-souris) une fois par heure.
 
 ------ Description (en) ------
 <p><strong>Frequency</strong> once per hour</p>
