--- a/data/feats/ancestry-13-I9cJYC7anz7HmpcJ.htm
+++ b/data/feats/ancestry-13-I9cJYC7anz7HmpcJ.htm
@@ -6,7 +6,7 @@ PrereqFR: Dracomancien
 
 ------ Benefits and spoiler ----
 Benefits: Your magic rivals that of lesser dragons.
-Avantage: Ta magie rivalise avec celle des dragons inférieurs.
+Avantage: Vous pouvez lancer un sort de niveau 3 et un sort de niveau 4 de votre modèle draconique  une fois par jour chacun.
 
 ------ Description (en) ------
 <p>Your magic rivals that of lesser dragons. Choose one 3rd-level spell and one 4th-level spell from those listed for a dragon spellcaster of your draconic exemplar's type, as on pages 104-126 of the <em>Bestiary</em> (such as @Compendium[pf2e.spells-srd.DCQHaLrYXMI37dvW]{Paralyze} and @Compendium[pf2e.spells-srd.GKpEcy9WId6NJvtx]{Stinking Cloud} for a black dragon exemplar).</p>
