--- a/data/feats/ancestry-13-ECcFHAeAmh5F3mxg.htm
+++ b/data/feats/ancestry-13-ECcFHAeAmh5F3mxg.htm
@@ -6,7 +6,7 @@ PrereqFR: Familiarité avec les armes azarketies
 
 ------ Benefits and spoiler ----
 Benefits: Your mastery with weapons both above and below water is unmatched.
-Avantage: VVotre rang de maîtrise avec les armes s'étend aux armes des azarketis.
+Avantage: Votre rang de maîtrise avec les armes s'étend aux armes des azarketis.
 
 ------ Description (en) ------
 <p>Your mastery with weapons both above and below water is unmatched. Whenever you gain a class feature that grants you expert or greater proficiency in certain weapons, you also gain that proficiency in @Compendium[pf2e.equipment-srd.62nnVQvGhoVLLl2K]{Crossbows}, @Compendium[pf2e.equipment-srd.XyA6PKV46aNlLXOd]{Hand Crossbows}, @Compendium[pf2e.equipment-srd.aXuJh4i8HqSu6NYV]{Longspears}, @Compendium[pf2e.equipment-srd.tOhoGvmCMw4JpWcS]{Spears}, @Compendium[pf2e.equipment-srd.FJrsDoaIXksVjld9]{Tridents}, and all azarketi weapons in which you are trained.</p>
