--- a/data/feats/ancestry-13-Ht6b8H9DpA9lWzAg.htm
+++ b/data/feats/ancestry-13-Ht6b8H9DpA9lWzAg.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: Over the course of adventuring, your adaptability has let you pick up numerous useful abilities.
-Avantage: Au fil des aventures, votre adaptabilité vous a permis d'acquérir de nombreuses capacités utiles.
+Avantage: Vous obtenez un don général de niveau 7 ou inférieur.
 
 ------ Description (en) ------
 <p>Over the course of adventuring, your adaptability has let you pick up numerous useful abilities. You gain a general feat of 7th level or lower. You must meet the feat's prerequisites.</p>
