--- a/data/feats/ancestry-13-jatfexNkXaTs9s5Q.htm
+++ b/data/feats/ancestry-13-jatfexNkXaTs9s5Q.htm
@@ -6,7 +6,7 @@ PrereqFR: au moins un sort inné arcanique ou occulte obtenu du fait d'un hérit
 
 ------ Benefits and spoiler ----
 Benefits: The magic within you manifests as a natural reaction to threats.
-Avantage: La magie en vous se manifeste comme une réaction naturelle aux menaces.
+Avantage: Une fois par jour, lorsque vous êtes attaqué, vous obtenez une Image miroir.
 
 ------ Description (en) ------
 <p><strong>Frequency</strong> once per day</p>
