--- a/data/feats/ancestry-13-kBnsLuh3eBLjwGpN.htm
+++ b/data/feats/ancestry-13-kBnsLuh3eBLjwGpN.htm
@@ -6,7 +6,7 @@ PrereqFR: Ailettes
 
 ------ Benefits and spoiler ----
 Benefits: You can fly a little!
-Avantage: Tu peux voler un peu !
+Avantage: Vous volez à la moitié de votre Vitesse mais devez terminer sur le sol pour ne pas tomber.
 
 ------ Description (en) ------
 <p><strong>Frequency</strong> once per round</p>
