--- a/data/feats/ancestry-13-Ih85PWZSVTwU0xkI.htm
+++ b/data/feats/ancestry-13-Ih85PWZSVTwU0xkI.htm
@@ -6,9 +6,10 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: The impulse to survive and continue fighting resonates deep within you.
-Avantage: L'impulsion de survivre et de continuer à se battre résonne au plus profond de vous.
+Avantage: Vous ajoutez vos valeurs Condamné et Blessé aux dégâts de vos Frappes au corps-à-corps.
 
 ------ Description (en) ------
 <p>The impulse to survive and continue fighting resonates deep within you. You gain a circumstance bonus to damage rolls on your melee Strikes equal to twice the sum of your wounded and doomed conditions (to a maximum of a +8 circumstance bonus to damage) whenever you have one or both conditions.</p>
 ------ Description (fr) ------
-<p>L'impulsion pour survivre et continuer à vous battre résonne fort en vous. Vous obtenez un bonus de circonstance aux jets de dégâts à vos fraes au corps-à-corps égales à deux fois la somme de vos conditions blessé et condamné (jusqu'à un bonus de circonstance maximum de +8 aux dégâts) lorsque vous avez l'une ou les deux conditions.</p>
+<p>L'impulsion pour survivre et continuer à vous battre résonne fort en vous.</p>
+<p>Vous obtenez un bonus de circonstances aux jets de dégâts à vos frappes au corps-à-corps égal à deux fois la somme de vos conditions Blessé et Condamné (jusqu'à un bonus de circonstance maximum de +8 aux dégâts) lorsque vous avez l'une ou les deux conditions.</p>
