--- a/data/feats/ancestry-13-J2CPfHKPvu6RGfY6.htm
+++ b/data/feats/ancestry-13-J2CPfHKPvu6RGfY6.htm
@@ -6,9 +6,9 @@ PrereqFR: Vol juvénile
 
 ------ Benefits and spoiler ----
 Benefits: You gain the effects of Juvenile Flight at all times, rather than just once per day for 10 minutes.
-Avantage: Vous bénéficiez des effets de Vol juvénile à tout moment, plutôt qu'une fois par jour pendant 10 minutes.
+Avantage: Vous bénéficiez des effets de Vol juvénile constamment.
 
 ------ Description (en) ------
 <p>You gain the effects of Juvenile Flight at all times, rather than just once per day for 10 minutes. This includes the status bonus to your Speed if you have Fledgling Flight.</p>
 ------ Description (fr) ------
-<p>Vous obtenez les effets de Vol juvénile à tout moment, au lieu de juste une fois par jour pendant 10 minutes. Cela inclut le bonus de statut à votre Vitese si vous avez Vol de l'oisillon.</p>
+<p>Vous obtenez les effets de Vol juvénile à tout moment, et plus seulement une fois par jour pendant 10 minutes. Cela inclut le bonus de statut à votre Vitesse si vous avez Vol de l'oisillon.</p>
