--- a/data/feats/ancestry-13-JQxFvMHu0ffo56RT.htm
+++ b/data/feats/ancestry-13-JQxFvMHu0ffo56RT.htm
@@ -6,9 +6,10 @@ PrereqFR: Bondé
 
 ------ Benefits and spoiler ----
 Benefits: You can dart around and between your larger allies' legs without tripping them up.
-Avantage: Vous pouvez vous faufiler autour et entre les jambes de vos alliés les plus grands sans les faire trébucher.
+Avantage: Vous pouvez terminer votre déplacement dans la case d'un allié.
 
 ------ Description (en) ------
 <p>You can dart around and between your larger allies’ legs without tripping them up. As long as you’re Small or smaller, you can end your movement in the same square as a Medium or larger ally. Only two creatures total can share the same space when using this ability or a similar one.</p>
 ------ Description (fr) ------
-<p>Vous pouvez vous précipiter autour et entre les jambes de votre alliés plus grands sans leur faire de croc-en-jambe. Tant que vous êetes Petit ou plus petit, vous pouvez terminer votre déplacement dans la même case qu'un allié de taille Moyenne ou plus grande. Seul un total de deux créatures peuvent partager la même case en utilisant cette capacité ou une autre similaire.</p>
+<p>Vous pouvez circuler autour et même entre les jambes de votre alliés plus grands sans risque de leur faire de croc-en-jambe.</p>
+<p>Tant que vous êtes de tailler Petite ou inférieure, vous pouvez terminer votre déplacement dans la même case qu'un allié de taille Moyenne ou supérieure. Seul un total de deux créatures peuvent partager la même case en utilisant cette capacité ou une autre similaire.</p>
