--- a/data/feats/ancestry-13-JlkkYedPyWLShuka.htm
+++ b/data/feats/ancestry-13-JlkkYedPyWLShuka.htm
@@ -6,9 +6,10 @@ PrereqFR: Mystères des sorts Kitsune
 
 ------ Benefits and spoiler ----
 Benefits: Your tails show your magical mastery.
-Avantage: Vos queues montrent votre maîtrise de la magie.
+Avantage: Vous pouvez choisir chaque jour de lancer Confusion, Protection contre la mort ou Scène illusoire et devenez expert avec les sorts divins et les jets d'attaque divins.
 
 ------ Description (en) ------
 <p>Your tails show your magical mastery. During your daily preparations, choose @Compendium[pf2e.spells-srd.LiGbewa9pO0yjbsY]{Confusion}, @Compendium[pf2e.spells-srd.YvXKGlHOt7mdW2jZ]{Death Ward}, or @Compendium[pf2e.spells-srd.Ucf8eynbZMfUucjE]{Illusory Scene}. You can Cast this Spell as a 5th-level divine innate spell once that day. You become an expert in divine spell DCs and divine spell attack rolls.</p>
 ------ Description (fr) ------
-<p>Vos queues démontrent votre maîtrise magique. Durant vos préparatifs quotidiens, choisissez @Compendium[pf2e.spells-srd.LiGbewa9pO0yjbsY]{Confusion}, @Compendium[pf2e.spells-srd.YvXKGlHOt7mdW2jZ]{Protection contre la mort} ou @Compendium[pf2e.spells-srd.Ucf8eynbZMfUucjE]{Scène illusoire}. Vous pouvez Lancer ce sort comme un sort inné divin au niveau 5 une fois durant cette journée. Vous devenez un expert dans le DD des sorts déivins et dans les jets d'attaque de sorts divins.</p>
+<p>Vos queues démontrent votre maîtrise magique.</p>
+<p>Durant vos préparatifs quotidiens, choisissez @Compendium[pf2e.spells-srd.LiGbewa9pO0yjbsY]{Confusion}, @Compendium[pf2e.spells-srd.YvXKGlHOt7mdW2jZ]{Protection contre la mort} ou @Compendium[pf2e.spells-srd.Ucf8eynbZMfUucjE]{Scène illusoire}. Vous pouvez Lancer ce sort comme un sort inné divin au niveau 5 une fois durant cette journée. Vous devenez un expert dans le DD des sorts divins et dans les jets d'attaque de sorts divins.</p>
