--- a/data/feats/ancestry-13-LTcpBbnngfuYTdB0.htm
+++ b/data/feats/ancestry-13-LTcpBbnngfuYTdB0.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: Though you know that you will eventually outlive your companions, seeing them at death's door brings clarity to your attacks.
-Avantage: Bien que vous sachiez que vous finirez par survivre à vos compagnons, le fait de les voir aux portes de la mort clarifie vos attaques.
+Avantage: Vous faites deux jets pour déterminer le résultat de votre Frappe lorsqu'un de vos alliés adjacent est Mourant.
 
 ------ Description (en) ------
 <p><strong>Frequency</strong> once every 10 minutes</p>
@@ -17,5 +17,5 @@ Avantage: Bien que vous sachiez que vous finirez par survivre à vos compagnons,
 <p><strong>Fréquence</strong> une fois toutes les 10 minutes</p>
 <p><strong>Conditions</strong> Vous êtes adjacent à un allié avec la condition @Compendium[pf2e.conditionitems.yZRUzMqrMmfLu0V1]{Mourant}.</p>
 <hr />
-<p>Bien que vous sachiez que vous allez finalement survivre à vos compagnons, les voir aux portes de la mort apporte la clarté à vos attaques.</p>
-<p>Faites une @Compendium[pf2e.actionspf2e.VjxZFuUXrCU94MWR]{Frappe}. Lancez deux fois le jet d'attaque et utiliser le meilleur résultat.</p>
+<p>Bien que vous sachiez que vous allez finalement survivre à vos compagnons, les voir aux portes de la mort apporte de la clarté à vos attaques.</p>
+<p>Faites une @Compendium[pf2e.actionspf2e.VjxZFuUXrCU94MWR]{Frappe}. Lancez deux fois le jet d'attaque et utilisez le meilleur résultat.</p>
