--- a/data/feats/ancestry-13-MR4X38qgBj5tmkMw.htm
+++ b/data/feats/ancestry-13-MR4X38qgBj5tmkMw.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: You recover from near-death experiences with astounding resilience.
-Avantage: Vous vous remettez d'expériences de mort imminente avec une résilience étonnante.
+Avantage: Une fois par jour, lorsque vous récupérez de l'état Mourant, vous n'augmentez pas votre état Blessé.
 
 ------ Description (en) ------
 <p><strong>Frequency</strong> once per day<br /><strong>Trigger</strong> You lose the @Compendium[pf2e.conditionitems.yZRUzMqrMmfLu0V1]{Dying} condition.</p>
