--- a/data/feats/ancestry-13-l11OWMFUixCcRYGm.htm
+++ b/data/feats/ancestry-13-l11OWMFUixCcRYGm.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: If you and up to four other creatures are in contact with a body of water deep enough for you to fully submerge, you can spend 10 minutes adapting the creatures to that specific body of water.
-Avantage: Si vous et jusqu'à quatre autres créatures êtes en contact avec une étendue d'eau suffisamment profonde pour que vous puissiez vous immerger complètement, vous pouvez passer 10 minutes à adapter les créatures à cette étendue d'eau spécifique.
+Avantage: Vous permettez à quatre créatures de respirer sous l'eau et de résister à la pression.
 
 ------ Description (en) ------
 <p><strong>Frequency</strong> once per day</p>
@@ -15,5 +15,5 @@ Avantage: Si vous et jusqu'à quatre autres créatures êtes en contact avec une
 ------ Description (fr) ------
 <p><strong>Fréquence</strong> une fois par jour</p>
 <hr />
-<p>Si vous et jusqu'à quatre autres créatures êtes en contact avec une étndue d'au assez profonde pour vous immerger totalement, vous pouvez passer 10 minutes à adapter les créatures à cette étendue d'eau spécifique.</p>
-<p>Clea leur permet de respirer normalement dans cette étendue d'eau et les protège de la pression de l'océan profond . Ces effets durent jusqu'à ce que les créatures ne soient plus longtemps en contact avec cette étendue d'eau ou jusqu'à ce que vous utilisez de nouveau cette aptitude, ce qui advient en premier pour chaque créature.</p>
+<p>Si vous et jusqu'à quatre autres créatures êtes en contact avec une étendue d'eau assez profonde pour vous immerger totalement, vous pouvez passer 10 minutes à adapter les créatures à cette étendue d'eau spécifique.</p>
+<p>Cela leur permet de respirer normalement dans cette étendue d'eau et les protège de la pression de l'océan profond. Ces effets durent jusqu'à ce que les créatures ne soient plus longtemps en contact avec cette étendue d'eau ou jusqu'à ce que vous utilisiez de nouveau cette aptitude, ce qui advient en premier pour chaque créature.</p>
