--- a/data/feats/ancestry-13-KRfZcToCc5nvcQRa.htm
+++ b/data/feats/ancestry-13-KRfZcToCc5nvcQRa.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: You caw ominously, cursing the creature with misfortune.
-Avantage: Vous croassez sinistrement, maudissant la créature de malheur.
+Avantage: La créature que vous ciblez doit prendre le plus mauvais de deux jets d'attaque ou tests de compétence.
 
 ------ Description (en) ------
 <p><strong>Frequency</strong> once per day</p>
@@ -17,4 +17,4 @@ Avantage: Vous croassez sinistrement, maudissant la créature de malheur.
 <p><strong>Fréquence</strong> une fois par jour</p>
 <p><strong>Déclencheur</strong> Une créature dans les 18 m va faire un jet d'attaque ou un test de compétence.</p>
 <hr />
-<p>Vous croasser de façon inquiétante, maudissant la créature avec de la malchance. La créature ciblée doit lancer deux fois le test déclencheur et conserver le plus mauvais résultat.</p>
+<p>Vous croassez de façon inquiétante, maudissant la créature avec de la malchance. La créature ciblée doit lancer deux fois le test déclencheur et conserver le plus mauvais résultat.</p>
