--- a/data/feats/ancestry-13-L231BR4815B6hwKT.htm
+++ b/data/feats/ancestry-13-L231BR4815B6hwKT.htm
@@ -6,7 +6,7 @@ PrereqFR: Tout don de lignage aasimar
 
 ------ Benefits and spoiler ----
 Benefits: You have a connection to the celestial realms, allowing you to summon a celestial ally.
-Avantage: Vous avez un lien avec les royaumes célestes, ce qui vous permet d'invoquer un allié céleste.
+Avantage: Vous pouvez lancer Convocation de céleste une fois par jour.
 
 ------ Description (en) ------
 <p>You have a connection to the celestial realms, allowing you to summon a celestial ally. Once per day, you can cast @Compendium[pf2e.spells-srd.lTDixrrNKaCvLKwX]{Summon Celestial} as a 5th-level divine innate spell, but the celestial summoned must be from the same category as your own lineage, such as a creature with the angel trait if you are angelkin.</p>
