--- a/data/feats/ancestry-13-NaY9HXeQ0yhoIorO.htm
+++ b/data/feats/ancestry-13-NaY9HXeQ0yhoIorO.htm
@@ -6,10 +6,10 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: You squish, slink, and skitter from cover to cover with great speed and stealth.
-Avantage: Vous vous faufilez, glissez et sautillez d'une couverture à l'autre avec une grande vitesse et une grande discrétion.
+Avantage: Vous pouvez vous déplacer de votre Vitesse lorsque vous Êtes furtif.
 
 ------ Description (en) ------
 <p>You squish, slink, and skitter from cover to cover with great speed and stealth. You can move up to your full Speed when you Sneak.</p>
 ------ Description (fr) ------
 <p>Vous vous serrez, vous déplacez furtivement et glissez d'abri en abri rapidement avec une grande discrétion.</p>
-<p>Vous pouvez vous déplacer à votre Vitesse lorsque vous êtes furtif.</p>
+<p>Vous pouvez vous déplacer de votre Vitesse lorsque vous Êtes furtif.</p>
