--- a/data/feats/ancestry-13-n82gTpAENgr6XjCM.htm
+++ b/data/feats/ancestry-13-n82gTpAENgr6XjCM.htm
@@ -6,9 +6,9 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: Your body is translucent while underwater.
-Avantage: Votre corps est translucide sous l'eau.
+Avantage: Vous pouvez toujours vous Cacher dans l'eau.
 
 ------ Description (en) ------
 <p>Your body is translucent while underwater. Whenever you are fully submerged in water, you can Hide from other creatures even if you don’t have cover against them and aren’t @Compendium[pf2e.conditionitems.DmAIPqOBomZ7H95W]{Concealed} from them.</p>
 ------ Description (fr) ------
-<p>Votre corps est translucide sous l'eau. Lorsque vous êtes complètement submergé dans l'eau, vous pouvez vous Cacherdes autres créatures même si vous n'avez pas d'abri à leur égardet n'êtes pas @Compendium[pf2e.conditionitems.DmAIPqOBomZ7H95W]{Masqué} pour eux.</p>
+<p>Votre corps est translucide sous l'eau. Lorsque vous êtes complètement immergé dans l'eau, vous pouvez vous Cacher des autres créatures même si vous n'avez pas d'abri à leur égard et n'êtes pas @Compendium[pf2e.conditionitems.DmAIPqOBomZ7H95W]{Masqué} pour eux.</p>
