--- a/data/feats/ancestry-13-ne7nVluvvVXMvuB1.htm
+++ b/data/feats/ancestry-13-ne7nVluvvVXMvuB1.htm
@@ -6,10 +6,10 @@ PrereqFR: elfe arctique, elfe des cavernes, elfe du désert, elfe des bois ou to
 
 ------ Benefits and spoiler ----
 Benefits: While all elves adapt to their environments over time, you have traveled so widely and become attuned to so many environs that your body now changes more rapidly than other elves.
-Avantage: Bien que tous les elfes s'adaptent à leur environnement au fil du temps, vous avez tellement voyagé et vous vous êtes mis au diapason de tant d'environnements que votre corps change maintenant plus rapidement que les autres elfes.
+Avantage: Au bout d'une semaine dans un environnement, votre héritage change au profit de celui de cet environnement.
 
 ------ Description (en) ------
 <p>While all elves adapt to their environments over time, you have traveled so widely and become attuned to so many environs that your body now changes more rapidly than other elves. After spending a week in an environment associated with an elf heritage (such as snow for arctic elf, or a forest or jungle for woodland elf) your heritage automatically changes to become that heritage. This never causes you to change to an elf heritage that isn't related to an environment, such as @Compendium[pf2e.ancestryfeatures.Nd9hdX8rdYyRozw8]{Ancient Elf}, @Compendium[pf2e.ancestryfeatures.jEtVesbqYcWGbBYk]{Seer Elf}, or @Compendium[pf2e.ancestryfeatures.1wVDYY9Wue0G5R9Q]{Whisper Elf}.</p>
 ------ Description (fr) ------
-<p>Alors que les autres elfes se sont adaptés à leur environnement au cours du temps, vous avez tellement voyagé et vous êtes harmonisés avec tant d'environnements que votre corps change plus rapidement que les autres elfes.</p>
+<p>Alors que les autres elfes se sont adaptés à leur environnement au cours du temps, vous avez tellement voyagé et vous vous êtes harmonisé avec tellement d'environnements que votre corps s'adapte plus rapidement que les autres elfes.</p>
 <p>Après avoir passé une semaine dans un environnement associé à un héritage elfique (tel que la neige pour l'elfe arctique ou une forêt ou une jungle pour un elfe des bois) votre héritage change automatiquement pour devenir celui de cet héritage. Cela ne provoque jamais un changement d'héritage qui n'est pas en lien avec un environnement, tel que @Compendium[pf2e.ancestryfeatures.ifwCISxY3xxuk5ks]{Elfe ancien}, @Compendium[pf2e.ancestryfeatures.jEtVesbqYcWGbBYk]{Elfe visionnaire} ou @Compendium[pf2e.ancestryfeatures.1wVDYY9Wue0G5R9Q]{Elfe des murmures}.</p>
