--- a/data/feats/ancestry-13-O65q744snXtC5Uc4.htm
+++ b/data/feats/ancestry-13-O65q744snXtC5Uc4.htm
@@ -6,9 +6,10 @@ PrereqFR: Poussé nanite
 
 ------ Benefits and spoiler ----
 Benefits: Your nanites are incredibly effective, capable of improving your body's efficiency regularly.
-Avantage: Vos nanites sont incroyablement efficaces, capables d'améliorer régulièrement l'efficacité de votre corps.
+Avantage: Vous pouvez utiliser Poussée nanite avec une fréquence de une fois toutes les 10 minutes, au lieu d'une fois par heure.
 
 ------ Description (en) ------
 <p>Your nanites are incredibly effective, capable of improving your body’s efficiency regularly. You can use Nanite Surge with a frequency of once per 10 minutes, rather than once per hour.</p>
 ------ Description (fr) ------
-<p>Vos nanites sont incroyablement efficcaces, capable d'améliorer l'efficacité de votre corps régulièrement. Vous pouvez utiliser Poussée nanite avec une fréquence de une fois par tranche de 10 minutes, au lieu d'une fois par heure.</p>
+<p>Vos nanites sont incroyablement efficcaces, capable d'améliorer l'efficacité de votre corps régulièrement.</p>
+<p>Vous pouvez utiliser Poussée nanite avec une fréquence de une fois toutes les 10 minutes, au lieu d'une fois par heure.</p>
