--- a/data/feats/ancestry-13-plhQDES7yb6xDAXL.htm
+++ b/data/feats/ancestry-13-plhQDES7yb6xDAXL.htm
@@ -6,7 +6,7 @@ PrereqFR: Ethnie garundaise, mauxi ou Tian-Yae|Aéromancien Rivain ou capacité 
 
 ------ Benefits and spoiler ----
 Benefits: Unique in Golarion’s history, the Shory people developed fighting styles dedicated to combat in the air.
-Avantage: Unique dans l'histoire de Golarion, le peuple Shory a développé des styles de combat dédiés au combat dans les airs.
+Avantage: Vous volez plus vite et avec une meilleur manœuvrabilité.
 
 ------ Description (en) ------
 <p>Unique in Golarion's history, the Shory people developed fighting styles dedicated to combat in the air. You gain a +2 circumstance bonus to Acrobatics checks to Maneuver in Flight and a +5-foot status bonus to your fly Speed whenever you are flying via magic.</p>
