--- a/data/feats/ancestry-13-s0OqtQOeYOGkBMYG.htm
+++ b/data/feats/ancestry-13-s0OqtQOeYOGkBMYG.htm
@@ -1,9 +1,12 @@
 Name: Steadfast Ally
 Nom: Allié inébranlable
 PrereqEN: Loyal Empath
-Avantage:
 PrereqFR: Empathe Loyal
 État: libre
+
+------ Benefits and spoiler ----
+Benefits: 
+Avantage: Vous pouvez aider sans préparation.
 
 ------ Description (en) ------
 <p>Your presence alone is enough to provide your allies with emotional support. You can use the @Compendium[pf2e.actionspf2e.HCl3pzVefiv9ZKQW]{Aid} reaction to grant a bonus to another creature's Will saving throw even when you haven't prepared to help.</p>
