--- a/data/feats/ancestry-13-OwJRuy4EW8vW09AI.htm
+++ b/data/feats/ancestry-13-OwJRuy4EW8vW09AI.htm
@@ -6,10 +6,10 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: Metallic veins grow throughout your body, giving your unarmed attacks a metallic sheen.
-Avantage: Des veines métalliques se développent dans tout votre corps, donnant à vos attaques sans arme un éclat métallique.
+Avantage: Vos attaques à mains nues sont soit en Fer froid, soit en Argent.
 
 ------ Description (en) ------
 <p>Metallic veins grow throughout your body, giving your unarmed attacks a metallic sheen. Choose either cold iron or silver. Your unarmed attacks are treated as the chosen type of metal.</p>
 ------ Description (fr) ------
-<p>De veines métalliques grandissent à travers votre corps, procurant à vos aattaques à mains nues des reflets métalliques.</p>
-<p>Choisissez soit fer froid, soit rgent. Vos attaques à mains nues sont considérées comme des du type du métal choisi.</p>
+<p>De veines métalliques grandissent à travers votre corps, procurant à vos attaques à mains nues des reflets métalliques.</p>
+<p>Choisissez soit fer froid, soit argent. Vos attaques à mains nues sont considérées comme des du type du métal choisi.</p>
