--- a/data/feats/ancestry-13-QHPtlFvTpgx1GE7S.htm
+++ b/data/feats/ancestry-13-QHPtlFvTpgx1GE7S.htm
@@ -6,9 +6,10 @@ PrereqFR: Combat en formation
 
 ------ Benefits and spoiler ----
 Benefits: You can assemble a formation even with members of ancestries that lack the hobgoblins’ military discipline, and you can extend these benefits to your hobgoblin allies.
-Avantage: Vous pouvez assembler une formation même avec des membres d'ascendances qui n'ont pas la discipline militaire des hobgobelins, et vous pouvez étendre ces avantages à vos alliés hobgobelins.
+Avantage: Vous étendez le bénéfice de Combat en formation aux non hobgobelins.
 
 ------ Description (en) ------
 <p>You can assemble a formation even with members of ancestries that lack the hobgoblins' military discipline, and you can extend these benefits to your hobgoblin allies. When you are adjacent to at least two humanoid allies, you gain the benefits of Formation Training, even if they aren't hobgoblin allies. Hobgoblin allies adjacent to you and at least one other hobgoblin ally also gain the bonuses from your Formation Training feat.</p>
 ------ Description (fr) ------
-<p>Vous pouvez assembler une formation même avec des membres dont les ascendances manquent de la discipline militaire des hobgobelins et vous pouvez étendre ces bénéfices à vos alliés hobgobelins. Lorsque vous êtes adjacents à au moins deux alliés humanoïdes, vous obtenez les bénéfices de Combat en formation, même s'il ne s'agit pas d'alliés hobgobelins. Les alliés hobgobelins qui vous adjacents ainsi qu'à au moins un autre allié hobgobelin bénéficient aussi des bonus de votre don Combat en formation.</p>
+<p>Vous pouvez rassembler une formation de combat même avec des membres dont les ascendances manquent de la discipline militaire des hobgobelins et vous pouvez étendre ces bénéfices à vos alliés hobgobelins.</p>
+<p>Lorsque vous êtes adjacent à au moins deux alliés humanoïdes, vous obtenez les bénéfices de Combat en formation, même s'il ne s'agit pas d'alliés hobgobelins. Les alliés hobgobelins qui vous sont adjacents ainsi qu'à au moins un autre allié hobgobelin bénéficient aussi des bonus de votre don Combat en formation.</p>
