--- a/data/feats/ancestry-13-T3cwVrRT0VMZIwpT.htm
+++ b/data/feats/ancestry-13-T3cwVrRT0VMZIwpT.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: You've learned to harness your connection to the earth to travel through it.
-Avantage: Tu as appris à exploiter ta connexion avec la terre pour voyager à travers elle.
+Avantage: Vous obtenez une vitesse de creusement de 4,5 m.
 
 ------ Description (en) ------
 <p>You’ve learned to harness your connection to the earth to travel through it. You gain a burrow Speed of 15 feet.</p>
