--- a/data/feats/ancestry-13-Tn2iMLKvhZki1O3S.htm
+++ b/data/feats/ancestry-13-Tn2iMLKvhZki1O3S.htm
@@ -6,10 +6,10 @@ PrereqFR: Ruse à mains nues iruxie
 
 ------ Benefits and spoiler ----
 Benefits: Your unarmed attacks blend tradition and training.
-Avantage: Vos attaques à mains nues mêlent tradition et entraînement.
+Avantage: Votre rang de maîtrise avec les armes s'étend aux attaques à mains nues iruxies.
 
 ------ Description (en) ------
 <p>Your unarmed attacks blend tradition and training. Whenever you gain a class feature that grants you expert or greater proficiency in certain weapons, you also gain that proficiency in the claw and unarmed attacks you gained from lizardfolk ancestry feats.</p>
 ------ Description (fr) ------
 <p>Vos attaques à mains nues mélangent tradition et entraînement.</p>
-<p>Lorsque vous obtenez une capacité de classe qui vous rend expert ou plus avec certaines armes, vous obtenez aussi cette maîtrise pour l'attaque de griffe et pour les attaques à mains nues que vous avez obtenues par le biais de vos dons d'ascendance iruxi.</p>
+<p>Lorsque vous obtenez une capacité de classe qui vous accorde la maîtrise experte ou supérieure avec une arme, vous obtenez aussi cette maîtrise pour l'attaque de griffe et pour les attaques à mains nues que vous avez obtenues par le biais de vos dons ancestraux iruxis.</p>
