--- a/data/feats/ancestry-13-nePEcAp7lTL35uyx.htm
+++ b/data/feats/ancestry-13-nePEcAp7lTL35uyx.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: You give a daring yowl in the face of adversity, calling your companion back from the brink of unconsciousness.
-Avantage: Vous poussez un hurlement audacieux face à l'adversité, rappelant votre compagnon au bord de l'inconscience.
+Avantage: Une fois par jour vous permettez à un allié à proximité de ne pas succomber.
 
 ------ Description (en) ------
 <p><strong>Frequency</strong> once per day<br /><strong>Trigger</strong> An ally within 30 feet would be reduced to 0 HP but not immediately killed.</p>
