--- a/data/feats/ancestry-13-pedHIDAVLFzzjGO1.htm
+++ b/data/feats/ancestry-13-pedHIDAVLFzzjGO1.htm
@@ -6,10 +6,10 @@ PrereqFR: Superstition omniprésente
 
 ------ Benefits and spoiler ----
 Benefits: You don't just resist magic; you devour it.
-Avantage: Tu ne résistes pas seulement à la magie, tu la dévores.
+Avantage: Résister à la magie vous accorde des points de vie temporaires.
 
 ------ Description (en) ------
 <p>You don't just resist magic; you devour it. Whenever you succeed at a saving throw against a spell or magical effect, you gain temporary Hit Points equal to double the spell's level, or equal to the level if the magical effect isn't a spell. These temporary Hit Points last until the end of your next turn.</p>
 ------ Description (fr) ------
 <p>Vous ne faites pas que résister à la magie ; vous la dévorez.</p>
-<p>Lorsque vous réussissez un jet de sauvegarde contre un sort ou un effet magique, vous obtenez des Points de vie temporaires supplémentaires en nombre égal au double du niveau du sort ou au niveau de l'effet si l'effet magique n'est pas un sort. Ces points de vie temporaires durent jusq'à la fin de votre prochain tour.</p>
+<p>Lorsque vous réussissez un jet de sauvegarde contre un sort ou un effet magique, vous obtenez des Points de vie temporaires supplémentaires en nombre égal au double du niveau du sort ou au niveau de l'effet si l'effet magique n'est pas un sort. Ces points de vie temporaires durent jusqu'à la fin de votre prochain tour.</p>
