--- a/data/feats/ancestry-13-pivX2SxPQjKDyvHU.htm
+++ b/data/feats/ancestry-13-pivX2SxPQjKDyvHU.htm
@@ -7,9 +7,10 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: Your iruxi unarmed attacks channel the spiritual energy of your ancestors.
-Avantage: Vos attaques iruxi sans arme canalisent l'énergie spirituelle de vos ancêtres.
+Avantage: Vos attaques à mains nues iruxies possèdent les effets de la rune de propriété spectrale.
 
 ------ Description (en) ------
 <p>Your iruxi unarmed attacks channel the spiritual energy of your ancestors. Any unarmed attacks you acquire from iruxi heritages or ancestry feats gain the effects of a @Compendium[pf2e.equipment-srd.JQdwHECogcTzdd8R]{Ghost Touch} property rune.</p>
 ------ Description (fr) ------
-<p>Vos attaques à mains nues Iruxie canalisent l'énergie spirituelle de votre ancêtres. Toute les attaques à mains nues que vous obtenez de votre héritage Iruxi ou de dons d'ascendance obtiennent les effets de la rune de propriété @Compendium[pf2e.equipment-srd.JQdwHECogcTzdd8R]{Spectrale}.</p>
+<p>Vos attaques à mains nues Iruxie canalisent l'énergie spirituelle de vos ancêtres.</p>
+<p>Toute les attaques à mains nues que vous obtenez de votre ascendance iruxie ou de dons ancestraux possèdent les effets de la rune de propriété @Compendium[pf2e.equipment-srd.JQdwHECogcTzdd8R]{Spectrale}.</p>
