--- a/data/feats/ancestry-13-t6GBBIwX7hvvxYyV.htm
+++ b/data/feats/ancestry-13-t6GBBIwX7hvvxYyV.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: Through your heritage, you can replicate some of a hag's magic.
-Avantage: Grâce à votre héritage, vous pouvez reproduire une partie de la magie d'une sorcière.
+Avantage: Vous pouvez lancer un sort choisi dans la liste des sorts de gueunaude une fois par jour.
 
 ------ Description (en) ------
 <p>Through your heritage, you can replicate some of a hag's magic. Choose one common spell of 4th level or lower from those available to a coven, including the spells contributed to a coven by a hag of your mother's type. You can cast this spell once per day as a 4th-level occult innate spell.</p>
@@ -20,9 +20,9 @@ Avantage: Grâce à votre héritage, vous pouvez reproduire une partie de la mag
 </ul>
 ------ Description (fr) ------
 <p>Par votre héritage, vous pouvez dupliquer un peu de la magie d'une guenaude.</p>
-<p>Choisissez un sort courant de niveau 4 ou inférieur parmi ceux accessibles à un cercle de guenaudes, en incluant les sorts que contribue à apporter à un cercle une guenaude du type de votre mère. Vous pouvez Lancer ce sort comme un sort occulte inné de niveau 4.</p>
+<p>Choisissez un sort courant de niveau 4 ou inférieur parmi ceux accessibles à un cercle de guenaudes, en incluant les sorts que contribue à apporter à un cercle une guenaude du type de votre mère. Vous pouvez Lancer ce sort une fois par jour comme un sort occulte inné de niveau 4.</p>
 <p>Les sorts accessibles à tous les cercles sont @Compendium[pf2e.spells-srd.41TZEjhO6D1nWw2X]{Augure}, @Compendium[pf2e.spells-srd.vLA0q0WOK2YPuJs6]{Charme}, @Compendium[pf2e.spells-srd.HXhWYJviWalN5tQ2]{Clairaudience}, @Compendium[pf2e.spells-srd.zvKWclOZ7A53DObE]{Clairvoyance}, @Compendium[pf2e.spells-srd.yM3KTTSAIHhyuP14]{Message onirique} et @Compendium[pf2e.spells-srd.i35dpZFI7jZcRoBo]{Déguisement illusoire}.</p>
-<p>Les sorts éligibles accordés par les plus proéminents types de guenaude sont :</p>
+<p>Les sorts éligibles accordés par les plus prééminents types de guenaude sont :</p>
 <ul>
 <li><strong>Guenaude annis</strong> @Compendium[pf2e.spells-srd.gPvtmKMRpg9I9D7H]{Cloué à terre}</li>
 <li><strong>Guenaude marine</strong> @Compendium[pf2e.spells-srd.f8hRqLJaxBVhF1u0]{Flèche acide}, @Compendium[pf2e.spells-srd.Seaah9amXg70RKw2]{Marche sur l'eau}</li>
