--- a/data/feats/ancestry-13-tpkih32Ch2wCA9R5.htm
+++ b/data/feats/ancestry-13-tpkih32Ch2wCA9R5.htm
@@ -6,7 +6,7 @@ PrereqFR: Familiarité avec les armes naines
 
 ------ Benefits and spoiler ----
 Benefits: Your dwarven affinity blends with your training, granting you great skill with dwarven weapons.
-Avantage: Votre affinité naine se mêle à votre entraînement, vous conférant une grande habileté avec les armes naines.
+Avantage: Votre rang de maîtrise avec les armes s'étend aux armes des nains.
 
 ------ Description (en) ------
 <p>Your dwarven affinity blends with your training, granting you great skill with dwarven weapons. Whenever you gain a class feature that grants you expert or greater proficiency in certain weapons, you also gain that proficiency for battle axes, picks, warhammers, and all dwarven weapons in which you are trained.</p>
