--- a/data/feats/ancestry-13-uQpAPkJ4ygzFZcIt.htm
+++ b/data/feats/ancestry-13-uQpAPkJ4ygzFZcIt.htm
@@ -6,9 +6,10 @@ PrereqFR: Familiarité avec les armes des vanths
 
 ------ Benefits and spoiler ----
 Benefits: Vanths themselves recognize you as an honorary reaper.
-Avantage: Les Vanths eux-mêmes vous reconnaissent comme un faucheur honoraire.
+Avantage: Votre rang de maîtrise avec les armes s'étend aux armes des vanths.
 
 ------ Description (en) ------
 <p>Vanths themselves recognize you as an honorary reaper. Whenever you gain a class feature that grants you expert or greater proficiency in a given weapon or weapons, you also gain that proficiency in bo staves, longbows, composite longbows, scythes, and staves.</p>
 ------ Description (fr) ------
-<p>Les vanths eux-mêmes vous reconnaissent comme une faucheuse honoraire. Lorsque vous obtenez une capacité de classe qui vous accorde la maîtrise expert ou supérirreur avec une ou plusieurs armes données, vous obtenez aussi cette maîtrise avec les bô, les arcs longs, les arcs longs composites, les bâtons et les faux.</p>
+<p>Les vanths eux-mêmes vous reconnaissent comme une faucheuse honoraire.</p>
+<p>Lorsque vous obtenez une capacité de classe qui vous accorde la maîtrise experte ou supérieure avec une arme, vous obtenez aussi cette maîtrise avec les bô, les arcs longs, les arcs longs composites, les bâtons et les faux.</p>
