--- a/data/feats/ancestry-13-S1Z5dFAkMKkFSofk.htm
+++ b/data/feats/ancestry-13-S1Z5dFAkMKkFSofk.htm
@@ -11,5 +11,5 @@ Avantage: Vous pouvez choisir entre une vitesse d'Escalade de 6 m et une vitesse
 ------ Description (en) ------
 <p>You have extensive training in remote environments, allowing you to move through these areas easily. When you gain this feat, you can choose to gain either a climb Speed of 20 feet or a swim Speed of 20 feet.</p>
 ------ Description (fr) ------
-<p>Vous avez un entraînement approfondis dans les environnements reculés, vous permettant de vous déplacer dans ces zones facilement.</p>
+<p>Vous avez un entraînement approfondi dans les environnements reculés, vous permettant de vous déplacer dans ces zones facilement.</p>
 <p>Lorsque vous obtenez ce don, vous pouvez choisir entre une vitesse d'Escalade de 6 m et une vitesse de Natation de 6 m.</p>
