--- a/data/feats/ancestry-13-V6iJ4v15Qc8awVCH.htm
+++ b/data/feats/ancestry-13-V6iJ4v15Qc8awVCH.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: Your celestial powers allow you to remove lesser afflictions with ease.
-Avantage: Vos pouvoirs célestes vous permettent d'éliminer les afflictions mineures avec facilité.
+Avantage: Vous pouvez lancer chaque jour deux sorts parmi Délivrance des malédictions, Délivrance des maladies et Neutralisation du poison.
 
 ------ Description (en) ------
 <p>Your celestial powers allow you to remove lesser afflictions with ease.</p>
