--- a/data/feats/ancestry-13-u0DA0gkrZxXb0Hle.htm
+++ b/data/feats/ancestry-13-u0DA0gkrZxXb0Hle.htm
@@ -6,7 +6,7 @@ PrereqFR: Très furtif
 
 ------ Benefits and spoiler ----
 Benefits: Your ability to hide is so great, you can disappear straight from vision.
-Avantage: Votre capacité à vous cacher est si grande que vous pouvez disparaître directement de la vue.
+Avantage: Vous vous déplacer de votre Vitesse en étant Furtif et n'avez pas besoin d'un abri ou d'être masqué pour vous Cacher ou Être furtif.
 
 ------ Description (en) ------
 <p>You can move up to your Speed when you use the Sneak action, and you no longer need to have cover or greater cover or be concealed to Hide or Sneak.</p>
