--- a/data/feats/ancestry-13-uDFgL6uCwJsaTHi3.htm
+++ b/data/feats/ancestry-13-uDFgL6uCwJsaTHi3.htm
@@ -2,12 +2,11 @@ Name: Call Of The Green Man
 Nom: Appel de l'homme vert
 PrereqEN: 
 PrereqFR: 
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Benefits and spoiler ----
 Benefits: You can call forth nearby nature spirits to augment your body.
-Avantage: Vous pouvez appeler les esprits de la nature à proximité pour augmenter votre corps.
+Avantage: Vous pouvez lancer Forme de plante une fois par jour.
 
 ------ Description (en) ------
 <p>You can call forth nearby nature spirits to augment your body. Once per day, you can cast @Compendium[pf2e.spells-srd.zCcfPS4y5SrZzU2x]{Plant Form} as a 5th-level primal innate spell. When you reach 17th level, this spell can be heightened to 6th level.</p>
