--- a/data/feats/ancestry-13-wHxXVknciaD4X8Ch.htm
+++ b/data/feats/ancestry-13-wHxXVknciaD4X8Ch.htm
@@ -1,9 +1,12 @@
 Name: Unrivaled Builder
 Nom: Constructeur sans rival
 PrereqEN: Handy with Your Paws
-Avantage:
 PrereqFR: Adroit de vos pattes
 État: libre
+
+------ Benefits and spoiler ----
+Benefits: 
+Avantage: Vous pouvez lancer Création une fois par jour, à condition de disposer des matériaux bruts nécessaires.
 
 ------ Description (en) ------
 <p>Building things is like solving a puzzle, and you know how to use anything at your disposal to get the job done. You gain <em>creation</em> as a 5th-level innate primal spell. You must have an equivalent Bulk of material to create an item, such as wood or scrap metal to make a wheelbarrow. You can cast this spell once each day.</p>
