--- a/data/feats/ancestry-13-X5NRdQ1W0Y5t6MFi.htm
+++ b/data/feats/ancestry-13-X5NRdQ1W0Y5t6MFi.htm
@@ -6,10 +6,10 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: Your hybrid shape is a hulking beast.
-Avantage: Votre forme hybride est une bête imposante.
+Avantage: Votre forme hybride obtient les effets d'Agrandissement.
 
 ------ Description (en) ------
 <p>Your hybrid shape is a hulking beast. While in your hybrid shape, you gain the effects of @Compendium[pf2e.spells-srd.wzctak6BxOW8xvFV]{Enlarge}.</p>
 ------ Description (fr) ------
 <p>Votre forme hybride est une bête massive</p>
-<p>Sous votre forme hybride, vous obtenez les effets d'@Compendium[pf2e.spells-srd.wzctak6BxOW8xvFV]{AgrandissementS}.</p>
+<p>Sous votre forme hybride, vous obtenez les effets d'@Compendium[pf2e.spells-srd.wzctak6BxOW8xvFV]{Agrandissement}.</p>
