--- a/data/feats/ancestry-13-xjE123p2rPTsz1eV.htm
+++ b/data/feats/ancestry-13-xjE123p2rPTsz1eV.htm
@@ -6,11 +6,11 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: Your festering connection to the forces of evil infuses your weapons with debilitating malevolence, tearing down creatures of good with every attack.
-Avantage: Le lien qui vous unit aux forces du mal insuffle à vos armes une malveillance débilitante, détruisant les créatures du bien à chaque attaque.
+Avantage: Vos Frappes avec des armes ou des attaques à mains nues infligent 1 dégât de mal supplémentaire et possèdent les traits mal et magique.
 
 ------ Description (en) ------
 <p>Your festering connection to the forces of evil infuses your weapons with debilitating malevolence, tearing down creatures of good with every attack.</p>
 <p>All your weapon and unarmed @Compendium[pf2e.actionspf2e.VjxZFuUXrCU94MWR]{Strikes} deal [[/r 1 #evil]] additional evil damage and have the evil and magical traits.</p>
 ------ Description (fr) ------
-<p>Le lien suppurant que vous avez avec les forces du mal imprègne vos armes d'une malveillance débilitante, faisant davantage souffrir les créatures du bien à chacune de vos attaques.</p>
-<p>Toutes vos @Compendium[pf2e.actionspf2e.VjxZFuUXrCU94MWR]{Frappes} avec des armes ou des attaques à mains nues infligent 1 dégât de mal supplémentaire et possèdent les trait mal et magique.</p>
+<p>Le lien suppurant quu vous unit aux forces du mal imprègne vos armes d'une malveillance débilitante, faisant davantage souffrir les créatures du bien à chacune de vos attaques.</p>
+<p>Toutes vos @Compendium[pf2e.actionspf2e.VjxZFuUXrCU94MWR]{Frappes} avec des armes ou des attaques à mains nues infligent 1 dégât de mal supplémentaire et possèdent les traits mal et magique.</p>
