--- a/data/feats/ancestry-13-wteuGNhOXLvBudRQ.htm
+++ b/data/feats/ancestry-13-wteuGNhOXLvBudRQ.htm
@@ -6,7 +6,7 @@ PrereqFR: Dresseur de bêtes ou compagnon animal|Férocité orque
 
 ------ Benefits and spoiler ----
 Benefits: Since ancient times, the mightiest orc beast tamers would draw out the true fighting spirit of their companion beasts by feeding the creatures a draft incorporating the orc's own blood.
-Avantage: Depuis des temps immémoriaux, les plus grands dresseurs de bêtes orques faisaient ressortir le véritable esprit de combat de leurs compagnons en les nourrissant d'un brouet incorporant le propre sang de l'orque.
+Avantage: Votre Férocité orque s'étend à vos compagnons animaux.
 
 ------ Description (en) ------
 <p>Since ancient times, the mightiest orc beast tamers would draw out the true fighting spirit of their companion beasts by feeding the creatures a draft incorporating the orc's own blood.</p><p>Animal companions or bonded animals you have gain the Orc Ferocity feat, and they gain a reaction they can use only for Orc Ferocity.</p>
